first localization run, faq fully translated

--- a/src/content/docs/es/faq.mdx
+++ b/src/content/docs/es/faq.mdx
@@ -1,139 +1,139 @@
 ---
-title: Frequently Asked questions
+title: Preguntas frecuentes
 ---
 
-Here are answers to some common questions concerning Scribe for Meetings. When faced with an issue, please refer to this document whenever possible.  
-Don’t see your question? [Contact us.](https://pneumasolutions.com/contact/), and let’s get you squared away.
+A continuación encontrará respuestas a algunas preguntas frecuentes sobre Scribe for Meetings. Cuando se enfrente a un problema, consulte este documento siempre que sea posible.  
+¿No encuentra su pregunta? [Póngase en contacto con nosotros (https://pneumasolutions.com/contact/) y le ayudaremos a aclararla.
 
-## What is Scribe for Meetings?
+## ¿Qué es Scribe for Meetings?
 
-Scribe for Meetings is a cloud-based technology that takes a shared presentation on platforms like Zoom, Microsoft Teams, Google Meet, and others and renders it into an accessible presentation in real time for print-impaired individuals.
+Scribe for Meetings es una tecnología basada en la nube que toma una presentación compartida en plataformas como Zoom, Microsoft Teams, Google Meet y otras y la convierte en una presentación accesible en tiempo real para personas con problemas de impresión.
 
-## Who benefits from Scribe for Meetings?
+## ¿Quién se beneficia de Scribe for Meetings?
 
-First and most importantly, the millions of print-impaired persons who would otherwise not benefit from the information being presented; and, the masses of businesses large and small, government agencies, all levels of education,, and organizations who know little about accessibility but would like an affordable means of making their content more inclusive.
+En primer lugar, y lo que es más importante, a los millones de personas con deficiencias de impresión que, de otro modo, no se beneficiarían de la información que se presenta; y, a las masas de empresas grandes y pequeñas, organismos gubernamentales, todos los niveles educativos y organizaciones que saben poco acerca de la accesibilidad, pero que desearían disponer de un medio asequible para hacer que su contenido sea más inclusivo.
 
-## Why should I choose Scribe for Meetings over other products?
+## ¿Por qué debería elegir Scribe for Meetings en lugar de otros productos?
 
-We’re confident there is nothing else out there that does what we do quite the way we do it. Scribe for Meetings is the first technology of its kind to synchronize with meeting platforms in real time. Sure, competitors will take note and likely roll out their imitations, and we look forward to the competition ,but unless they plan on competing on price, we feel confident you will find what you need right here.
+Estamos seguros de que no hay nada más en el mercado que haga lo que nosotros hacemos. Scribe for Meetings es la primera tecnología de este tipo que se sincroniza con las plataformas de reuniones en tiempo real. Sin duda, los competidores tomarán nota y es probable que lancen sus imitaciones, y esperamos con interés la competencia, pero a menos que planeen competir en precio, estamos seguros de que encontrará lo que necesita aquí.
 
-## How does Scribe for Meetings work?
+## ¿Cómo funciona Scribe for Meetings?
 
-If you are the host:
-1. Visit [ScribeForMeetings.com,](https://scribeformeetings.com) paste the invite link for your meeting, and press “Go”.
-1. Click the button to register your meeting.
-1. If prompted, enter your email address to log in. If you’re using Scribe for Meetings on behalf of an organization, make sure to use your email address provided by that organization. If your organization has integrated Scribe for Meetings with a single sign-on (SSO) system, then you’ll be taken to the normal login process for your organization, or possibly logged in automatically. Otherwise, we’ll send you an email with a link that you can use to log into Scribe for Meetings.
-1. Enter a name for your meeting, select your PowerPoint slide deck, and press “Submit”.
-    NOTE: Scribe for Meetings currently supports Zoom meetings, Zoom webinars and Microsoft Teams. Sign up to our email list to receive a notification when we add features and additional meeting platforms.
+Si usted es el anfitrión:
+1. Visite [ScribeForMeetings.com,](https://scribeformeetings.com) pegue el enlace de invitación a su reunión y pulse "Ir".
+1. Haz clic en el botón para registrar tu reunión.
+1. Si se le solicita, introduzca su dirección de correo electrónico para iniciar sesión. Si utiliza Scribe for Meetings en nombre de una organización, asegúrese de utilizar la dirección de correo electrónico proporcionada por dicha organización. Si su organización ha integrado Scribe for Meetings con un sistema de inicio de sesión único (SSO), accederá al proceso de inicio de sesión normal de su organización o, posiblemente, iniciará sesión automáticamente. De lo contrario, le enviaremos un correo electrónico con un enlace que puede utilizar para iniciar sesión en Scribe for Meetings.
+1. Introduzca un nombre para su reunión, seleccione su presentación de diapositivas de PowerPoint y pulse "Enviar".
+    NOTA: Scribe for Meetings es compatible actualmente con reuniones de Zoom, seminarios web de Zoom y Microsoft Teams. Suscríbase a nuestra lista de correo electrónico para recibir una notificación cuando añadamos funciones y plataformas de reuniones adicionales.
 
-Your content will be ready to launch within minutes. No knowledge of creating accessible presentations is required. As the host, you don’t need to run extra software on your device, and content can be uploaded as little as 5 minutes before the meeting.
-For the print-impaired meeting attendee, navigate to https://www.ScribeForMeetings.com, paste in your Zoom or Microsoft Teams invite link, and press “Go”. Alternatively, your meeting host might have given you a direct link to Scribe for Meetings, either in the invitation email or in the meeting itself via chat. Whichever way you get there, you’re now ready to follow along with the presentation in any web browser on any platform.
+Su contenido estará listo para lanzarse en cuestión de minutos. No es necesario tener conocimientos de creación de presentaciones accesibles. Como anfitrión, no necesita ejecutar software adicional en su dispositivo, y el contenido puede cargarse tan solo 5 minutos antes de la reunión.
+Para los asistentes a la reunión con problemas de impresión, ve a https://www.ScribeForMeetings.com, pega el enlace de invitación de Zoom o Microsoft Teams y pulsa "Ir". También es posible que el anfitrión de la reunión le haya proporcionado un enlace directo a Scribe for Meetings, ya sea en el correo electrónico de invitación o en la propia reunión a través del chat. Sea cual sea la forma de llegar, ya está listo para seguir la presentación en cualquier navegador web de cualquier plataforma.
 
-## How difficult is it to install Scribe for Meetings?
+## ¿Es difícil instalar Scribe for Meetings?
 
-Scribe for Meetings is not an installed application. It is a cloud service, so nothing more than a browser is needed to enjoy a meeting. For presenters, Other than uploading their content in advance of the meeting, the process was intentionally designed to be simple. There is nothing to install to your computer or device other than Zoom, Microsoft Teams or similar meeting platforms.
-Enterprise customers can host Scribe for Meetings on their own servers. Please get in touch with us for details.
+Scribe for Meetings no es una aplicación instalada. Es un servicio en la nube, por lo que no se necesita nada más que un navegador para disfrutar de una reunión. Para los presentadores, aparte de cargar su contenido antes de la reunión, el proceso se diseñó intencionadamente para que fuera sencillo. No hay nada que instalar en su ordenador o dispositivo aparte de Zoom, Microsoft Teams o plataformas de reuniones similares.
+Los clientes empresariales pueden alojar Scribe for Meetings en sus propios servidores. Póngase en contacto con nosotros para obtener más información.
 
-## I see an attendee named “Scribe for Meetings” trying to join my meeting. What’s going on?
+## Veo que un asistente llamado "Scribe for Meetings" intenta unirse a mi reunión. ¿Qué ocurre?
 
-That’s the Scribe bot. This bot watches the screen in your meeting, so it can see what slide is currently being displayed and provide the accessible version of that slide in real time to print-impaired attendees. The Scribe bot will not disrupt your meeting in any way, and it will not collect any information other than what content is currently being displayed through screen sharing. If your meeting has a waiting room, please promptly admit the Scribe bot into the meeting. Otherwise, Scribe for Meetings will not work.
+Es el bot Scribe. Este bot observa la pantalla de la reunión para ver qué diapositiva se está mostrando y proporcionar la versión accesible de esa diapositiva en tiempo real a los asistentes con problemas de impresión. El bot Scribe no interrumpirá la reunión en modo alguno y no recopilará más información que el contenido que se está mostrando en ese momento a través de la pantalla compartida. Si su reunión tiene una sala de espera, admita sin demora al bot Scribe en la reunión. De lo contrario, Scribe for Meetings no funcionará.
 
-## I’m a print-impaired meeting attendee, and I don’t know if the meeting I’m attending has been registered through Scribe for Meetings. What can I do?
+## Asisto a una reunión con problemas de impresión y no sé si la reunión a la que asisto se ha registrado a través de Scribe for Meetings. ¿Qué puedo hacer?
 
-Go to [ScribeForMeetings.com](https://scribeformeetings.com), paste in the Zoom or Microsoft Teams invite link for your meeting, and press “Go”. If the meeting has been registered with Scribe for Meetings, then you’re ready to follow along with accessible slides. If not, you can sign up to be notified by email when the meeting has been registered with Scribe for Meetings.
+Vaya a [ScribeForMeetings.com](https://scribeformeetings.com), pegue el enlace de invitación de Zoom o Microsoft Teams para su reunión y pulse "Ir". Si la reunión se ha registrado en Scribe for Meetings, podrás seguirla con diapositivas accesibles. Si no, puedes inscribirte para recibir una notificación por correo electrónico cuando la reunión se haya registrado en Scribe for Meetings.
 
-## I frequently attend Zoom or Microsoft Teams meetings. What’s the easiest way for me to find out if a meeting is registered with Scribe for Meetings, and if it is, view the accessible content?
+## Asisto con frecuencia a reuniones de Zoom o Microsoft Teams. ¿Cuál es la forma más sencilla de averiguar si una reunión está registrada en Scribe for Meetings y, en caso afirmativo, ver el contenido accesible?
 
-Scribe for Meetings has an [extension for Chrome and Edge](https://chrome.google.com/webstore/detail/scribe-for-meetings/bikolphfhfiambndbiimigilhfekcfpn) that checks the availability on Scribe for Meetings of any Zoom or Microsoft Teams meeting you attend. With a single hotkey, you can view the accessible content if the meeting is registered, or request a follow-up notification if the meeting is registered with Scribe for Meetings later.
+Scribe for Meetings tiene una [extensión para Chrome y Edge](https://chrome.google.com/webstore/detail/scribe-for-meetings/bikolphfhfiambndbiimigilhfekcfpn) que comprueba la disponibilidad en Scribe for Meetings de cualquier reunión de Zoom o Microsoft Teams a la que asista. Con una sola tecla de acceso rápido, puede ver el contenido accesible si la reunión está registrada, o solicitar una notificación de seguimiento si la reunión se registra en Scribe for Meetings más tarde.
 
-## I’m a print-impaired meeting attendee. Do you have any resources to help me ask the meeting host to use Scribe for Meetings?
+## Asisto a una reunión con problemas de impresión. ¿Disponen de algún recurso que me ayude a pedir al organizador de la reunión que utilice Scribe for Meetings?
 
-Yes; check out our [Scribe for Meetings Self-Advocacy Kit](https://sak.scribeformeetings.com). Here you’ll find a variety of pre-written letters that you can personalize, then copy and paste into an email.
+Sí; consulte nuestro [Kit de autoayuda de Scribe para reuniones](https://sak.scribeformeetings.com). Aquí encontrarás una variedad de cartas ya escritas que puedes personalizar, copiar y pegar en un correo electrónico.
 
-## Can Scribe for Meetings convert a presentation to accessible file formats for offline viewing?
+## ¿Puede Scribe for Meetings convertir una presentación a formatos de archivo accesibles para su visualización sin conexión?
 
-Yes. When creating the meeting, the presenter can optionally choose to provide their presentation for downloading in the following file formats:
-* An accessible web page, with all of the same features as the live presentation, including read aloud
-* Tagged PDF
-* MP3, via text-to-speech in about a dozen languages
-* DAISY, text plus audio
+Sí. Al crear la reunión, el presentador puede optar por proporcionar su presentación para su descarga en los siguientes formatos de archivo:
+* Una página web accesible, con todas las mismas funciones que la presentación en directo, incluida la lectura en voz alta
+* PDF etiquetado
+* MP3, con conversión de texto a voz en una docena de idiomas
+* DAISY, texto y audio
 * EPUB
 * Microsoft Word
-* Braille: Grade 1, Grade 2, Unified English Braille, and many other languages
+* Braille: Grado 1, Grado 2, Braille inglés unificado y muchos otros idiomas
 
-The PDF and Microsoft Word options support large print. This option, and other options such as speaking rate for audio output, can be chosen by attendees when they download the slides.
-This feature is not enabled by default; the presenter must choose to allow it. To enable this feature when registering a meeting, check the checkbox called “Allow attendees to download accessible versions of slides.” This choice will only take effect for the meeting currently being registered.
-For a meeting where this feature is enabled, as soon as the presenter has shown a slide, the web page where attendees view accessible slides will include a link called “Download Slides”. To download the slides, an attendee should follow these steps:
-1. Click the “Download Slides” link.
-1. If prompted, enter your email address and follow the instructions to log in.
-1. Choose the accessible format you want.
-1. For some formats, you can optionally customize settings, such as text-to-speech voice, speaking rate, braille translation table, or large print.
-1. Click the “Prepare Download” button.
-1. Watch your email for the download link. For most formats, the email will arrive within a few minutes. Conversion to audio can take much longer, depending on the length of the slide deck, because speech synthesis is a more time-consuming process than other conversions.
+Las opciones PDF y Microsoft Word admiten letra grande. Los asistentes pueden elegir esta opción, y otras opciones como la velocidad de habla para la salida de audio, cuando descargan las diapositivas.
+Esta función no está activada por defecto; el presentador debe optar por permitirla. Para habilitar esta función al registrar una reunión, marque la casilla "Permitir a los asistentes descargar versiones accesibles de las diapositivas" Esta opción sólo tendrá efecto para la reunión que se esté registrando en ese momento.
+En una reunión en la que esté activada esta función, en cuanto el presentador haya mostrado una diapositiva, la página web en la que los asistentes vean las diapositivas accesibles incluirá un enlace llamado "Descargar diapositivas". Para descargar las diapositivas, los asistentes deberán seguir estos pasos:
+1. Haga clic en el enlace "Descargar diapositivas".
+1. Si se le solicita, introduzca su dirección de correo electrónico y siga las instrucciones para iniciar sesión.
+1. Elija el formato accesible que desee.
+1. Para algunos formatos, puedes personalizar opcionalmente los ajustes, como la voz de texto a voz, la velocidad de habla, la tabla de traducción al braille o la letra grande.
+1. Haz clic en el botón "Preparar descarga".
+1. Esté atento a su correo electrónico para recibir el enlace de descarga. Para la mayoría de los formatos, el correo electrónico llegará en unos minutos. La conversión a audio puede llevar mucho más tiempo, dependiendo de la longitud de la presentación de diapositivas, porque la síntesis de voz es un proceso que lleva más tiempo que otras conversiones.
 
-## I host many meetings, and I want to allow my attendees to download the slides for all of these meetings. Can I turn this feature on by default?
+## Organizo muchas reuniones y quiero que los asistentes puedan descargar las diapositivas de todas ellas. ¿Puedo activar esta función por defecto?
 
-Yes. Follow these steps:
+Sí. Sigue estos pasos:
 1. 
-Go to ScribeForMeetings.com.
-1. If there’s a “Log In” link at the top of the page, click it, enter your email address, and follow the instructions to log into Scribe for Meetings.
-1. Click “Settings”, then “Meeting Defaults”.
-1. Check the checkbox called “Allow attendees to download accessible versions of slides”, then click “Save”.
+Vaya a ScribeForMeetings.com.
+1. Si hay un enlace "Iniciar sesión" en la parte superior de la página, haga clic en él, introduzca su dirección de correo electrónico y siga las instrucciones para iniciar sesión en Scribe for Meetings.
+1. Haga clic en "Configuración" y, a continuación, en "Valores predeterminados de la reunión".
+1. Marque la casilla "Permitir a los asistentes descargar versiones accesibles de las diapositivas" y, a continuación, haga clic en "Guardar".
 
-## I want to protect my slides from unauthorized copying and distribution. Does Scribe for Meetings support this?
+## Quiero proteger mis diapositivas de copias y distribuciones no autorizadas. ¿Es esto posible con Scribe for Meetings?
 
-Unfortunately, Scribe for Meetings cannot stop your attendees from copying the text of your slides. However, if you don’t allow the slides to be downloaded, it won’t be easy for attendees to copy your slides, because they will have to copy one slide at a time. Also, note that in practice, this is no different from what any attendee can already do by taking screenshots of your slides.
+Lamentablemente, Scribe for Meetings no puede impedir que los asistentes copien el texto de las diapositivas. Sin embargo, si no permite que las diapositivas se descarguen, no será fácil para los asistentes copiar sus diapositivas, ya que tendrán que copiar una diapositiva cada vez. Además, ten en cuenta que, en la práctica, esto no difiere de lo que ya puede hacer cualquier asistente haciendo capturas de pantalla de tus diapositivas.
 
-## Is Scribe for Meetings multilingual?
+## ¿Es Scribe for Meetings multilingüe?
 
-Yes. Scribe for Meetings can render content in any of 140 languages, again with no extra effort from the presenter.
+Sí, Scribe for Meetings puede mostrar el contenido en 140 idiomas, sin que el presentador tenga que hacer ningún esfuerzo adicional.
 
-## Do I need to slow down my presentation to make sure that print-impaired attendees can keep up?
+## ¿Tengo que ralentizar mi presentación para asegurarme de que los asistentes con problemas de impresión puedan seguir el ritmo?
 
-No. Scribe for Meetings has a feature called Dynamic Visual Representation, or DVR mode for short, that allows print-impaired attendees to read your accessible slides at their own pace. An attendee can pause the live presentation, go back to a slide they’ve already read, move forward at their own pace, and then continue with the live presentation when they’re ready.
-To use DVR mode, the attendee should press either the Suspend Presentation button or the Previous Slide button. These buttons are labeled as such for screen reader users, and for mouse users who hover over them. Visually, they’re at the bottom of the page and look like the Pause and Previous Track buttons in a media player. When the user presses one of these buttons, the live presentation will pause, and for the Previous Slide button, it will return to the previous slide. The user can then use the Previous Slide and Next Slide buttons to go through the slides at their own pace, and the Go Live button to return to the live presentation. These buttons look like the Previous Track, Next Track, and Play buttons in a media player.  
-Note that DVR mode only allows attendees to review slides that have been shown since they joined the presentation. If a print-impaired attendee is late for your presentation, then they missed the same slides that any other late attendee would have missed.
+No. Scribe for Meetings cuenta con una función llamada Representación Visual Dinámica, o modo DVR para abreviar, que permite a los asistentes con problemas de impresión leer sus diapositivas accesibles a su propio ritmo. Un asistente puede pausar la presentación en directo, volver a una diapositiva que ya haya leído, avanzar a su propio ritmo y continuar con la presentación en directo cuando esté preparado.
+Para utilizar el modo DVR, el asistente debe pulsar el botón Suspender presentación o el botón Diapositiva anterior. Estos botones están etiquetados como tales para los usuarios de lectores de pantalla y para los usuarios de ratón que pasen el ratón por encima de ellos. Visualmente, están en la parte inferior de la página y se parecen a los botones Pausa y Pista anterior de un reproductor multimedia. Cuando el usuario pulsa uno de estos botones, la presentación en directo se pausa, y en el caso del botón Diapositiva anterior, se vuelve a la diapositiva anterior. El usuario puede entonces utilizar los botones Diapositiva anterior y Diapositiva siguiente para recorrer las diapositivas a su propio ritmo, y el botón Ir en directo para volver a la presentación en directo. Estos botones se parecen a los botones Pista anterior, Pista siguiente y Reproducir de un reproductor multimedia.  
+Tenga en cuenta que el modo DVR sólo permite a los asistentes revisar las diapositivas que se han mostrado desde que entraron en la presentación. Si un asistente con problemas de impresión llega tarde a la presentación, se perderá las mismas diapositivas que cualquier otro asistente.
 
-## I have a print-impaired attendee who would benefit from having my content spoken aloud but isn’t comfortable with a full screen reader. Can Scribe for Meetings help?
+## Tengo un asistente con problemas de impresión al que le vendría bien que mi contenido se hablara en voz alta, pero no se siente cómodo con un lector de pantalla completa. ¿Puede ayudarme Scribe for Meetings?
 
-Yes. Our Read Aloud feature will speak your slides using the voices provided by your user’s device and web browser, while drawing a box around each word as it is spoken to help the user follow along visually. For Windows users, we highly recommend the Microsoft Edge browser for this feature, because Edge offers outstanding voices in several languages, free of charge. However, this feature also works with all other major platforms and browsers, including mobile devices.  
-To start reading the current slide aloud, press the Read Aloud button, which is at the bottom of the screen and looks like a speaker. While Scribe for Meetings is reading the slide aloud, it will show controls to stop reading (the button with a square icon), pause or resume, go back or forward (the buttons that look like Previous Track and Next Track buttons in a media player), speed up and slow down reading, or change the voice. These controls will go away as soon as reading is finished or as soon as the user stops it.  
-Note that Read Aloud and DVR mode (see above) can be used together, to allow print-impaired attendees to read slides both in their own way and at their own pace.
+Sí. Nuestra función de lectura en voz alta pronunciará sus diapositivas utilizando las voces proporcionadas por el dispositivo y el navegador web del usuario, mientras dibuja un recuadro alrededor de cada palabra a medida que se pronuncia para ayudar al usuario a seguirla visualmente. Para los usuarios de Windows, recomendamos encarecidamente el navegador Microsoft Edge para esta función, ya que Edge ofrece excelentes voces en varios idiomas, de forma gratuita. Sin embargo, esta función también funciona con todas las demás plataformas y navegadores principales, incluidos los dispositivos móviles.  
+Para empezar a leer la diapositiva actual en voz alta, pulse el botón Leer en voz alta, que se encuentra en la parte inferior de la pantalla y parece un altavoz. Mientras Scribe for Meetings está leyendo la diapositiva en voz alta, mostrará controles para detener la lectura (el botón con un icono cuadrado), pausar o reanudar, retroceder o avanzar (los botones que parecen los botones Pista anterior y Pista siguiente de un reproductor multimedia), acelerar y ralentizar la lectura o cambiar la voz. Estos controles desaparecerán en cuanto termine la lectura o el usuario la detenga.  
+Tenga en cuenta que la lectura en voz alta y el modo DVR (véase más arriba) pueden utilizarse conjuntamente, para que los asistentes con problemas de impresión puedan leer las diapositivas a su manera y a su ritmo.
 
-## I have a print-impaired attendee who needs my slides in a large font but doesn’t need a full-screen magnification program. Can Scribe for Meetings help?
+## Tengo un asistente con problemas de impresión que necesita mis diapositivas en una fuente grande pero no necesita un programa de ampliación a pantalla completa. ¿Puede ayudarme Scribe for Meetings?
 
-Yes. Scribe for Meetings displays your slides in a way that makes them accessible for attendees with all types of content requirements. If large fonts are needed, an attendee can use their browser’s page zoom feature to adjust the font size of the slides, without requiring the user to continually scroll back and forth. Scribe for Meetings will also automatically display the text in the user’s preferred color scheme, whether it’s the usual dark-on-light, light-on-dark (also known as dark mode), or a custom scheme.  
+Sí. Scribe for Meetings muestra sus diapositivas de forma que sean accesibles para los asistentes con todo tipo de requisitos de contenido. Si se necesitan fuentes grandes, un asistente puede utilizar la función de zoom de página de su navegador para ajustar el tamaño de la fuente de las diapositivas, sin necesidad de que el usuario se desplace continuamente hacia delante y hacia atrás. Scribe for Meetings también mostrará automáticamente el texto en el esquema de colores preferido por el usuario, ya sea el habitual oscuro sobre claro, claro sobre oscuro (también conocido como modo oscuro) o un esquema personalizado.  
 
-## Wait! What’s going on here? Why do my slides look so different in Scribe for Meetings than they do in my presentation?
+## ¡Espera! ¿Qué está pasando aquí? ¿Por qué mis diapositivas tienen un aspecto tan diferente en Scribe for Meetings que en mi presentación?
 
-Every aspect of how Scribe for Meetings displays your slides is optimized for accessibility, for attendees with all types of print impairments. Since Scribe for Meetings is meant to be used alongside your existing meeting platform, attendees are always free to flip back to the main meeting window to see the slides as they’re displayed in your presentation without accessibility.
+Cada aspecto de cómo Scribe para Reuniones muestra sus diapositivas está optimizado para la accesibilidad, para los asistentes con todo tipo de problemas de impresión. Dado que Scribe para reuniones está pensado para utilizarse junto con su plataforma de reuniones existente, los asistentes siempre pueden volver a la ventana principal de la reunión para ver las diapositivas tal y como se muestran en su presentación sin accesibilidad.
 
-## I don’t use PowerPoint. Can I still make my presentation accessible with Scribe for Meetings?
+## No utilizo PowerPoint. ¿Puedo hacer que mi presentación sea accesible con Scribe for Meetings?
 
-Scribe for Meetings can make your screen-shared slides accessible no matter what app you use to present them, as long as you can provide your slide deck in PowerPoint format. Other presentation apps such as Keynote and Google Slides can convert their slide decks to PowerPoint format, so you can use these with Scribe for Meetings.
+Scribe for Meetings puede hacer que sus diapositivas compartidas en pantalla sean accesibles independientemente de la aplicación que utilice para presentarlas, siempre y cuando pueda proporcionar su paquete de diapositivas en formato PowerPoint. Otras aplicaciones de presentación como Keynote y Google Slides pueden convertir sus presentaciones de diapositivas a formato PowerPoint, por lo que puede utilizarlas con Scribe for Meetings.
 
-## Scribe for Meetings isn’t showing the accessible versions of my slides during the presentation, or it’s skipping some slides. What’s wrong?
+## Scribe for Meetings no muestra las versiones accesibles de mis diapositivas durante la presentación, o se salta algunas diapositivas. ¿Qué ocurre?
 
-Make sure that you’re presenting your slides in a full-screen slide show, and that you’ve set up Zoom or Microsoft Teams screen sharing to share that slide show with your audience. If you’re using PowerPoint for Windows to run your presentation, then once you’ve opened PowerPoint, make sure you press F5 to enter slide show mode.
-[Learn more about how to use Zoom screen sharing with PowerPoint.](https://support.zoom.us/hc/en-us/articles/203395347-Screen-Sharing-a-PowerPoint-Presentation)
-[Learn how to use Microsoft Teams screen sharing with PowerPoint.](https://support.microsoft.com/en-us/office/share-powerpoint-slides-in-a-teams-meeting-fc5a5394-2159-419c-bc59-1f64c1f4e470)
+Asegúrese de que está presentando sus diapositivas en una presentación a pantalla completa y de que ha configurado el uso compartido de pantalla de Zoom o Microsoft Teams para compartir esa presentación con su audiencia. Si utilizas PowerPoint para Windows para ejecutar tu presentación, una vez que hayas abierto PowerPoint, asegúrate de pulsar F5 para entrar en el modo de presentación de diapositivas.
+[Más información sobre cómo utilizar el uso compartido de pantalla Zoom con PowerPoint](https://support.zoom.us/hc/en-us/articles/203395347-Screen-Sharing-a-PowerPoint-Presentation)
+[Más información sobre cómo utilizar la pantalla compartida de Microsoft Teams con PowerPoint](https://support.microsoft.com/en-us/office/share-powerpoint-slides-in-a-teams-meeting-fc5a5394-2159-419c-bc59-1f64c1f4e470)
 
-## How does Scribe for Meetings handle pictures and graphics in my slides?
+## ¿Cómo gestiona Scribe for Meetings las imágenes y los gráficos de mis diapositivas?
 
-If you already wrote descriptions (also known as alt tags or captions) for the graphical content in your slides, Scribe for Meetings will use those. Otherwise, Scribe for Meetings will use a cloud-based image description service powered by machine learning to automatically add alt tags for your graphics. If those pictures contain text, Scribe for Meetings will also use optical character recognition (OCR) to make that text accessible.
+Si ya ha escrito descripciones (también conocidas como etiquetas alt o pies de foto) para el contenido gráfico de sus diapositivas, Scribe for Meetings las utilizará. De lo contrario, Scribe for Meetings utilizará un servicio de descripción de imágenes basado en la nube y basado en el aprendizaje automático para añadir automáticamente etiquetas alt para sus gráficos. Si esas imágenes contienen texto, Scribe for Meetings también utilizará el reconocimiento óptico de caracteres (OCR) para que ese texto sea accesible.
 
-## My slides have charts, diagrams, or other complex graphics. Can Scribe for Meetings handle them?
+## Mis diapositivas tienen cuadros, diagramas u otros gráficos complejos. ¿Puede Scribe for Meetings manejarlos?
 
-The short answer is, not for the most part. We’re still working on this. Because the Scribe Augmented Document Remediation platform is powered by machine learning, as we receive more documents and slide decks with complex graphics, we’ll be able to train our model to make those graphics accessible. But, for now, you’ll just have to try it and see.
+La respuesta es que no en la mayoría de los casos. Todavía estamos trabajando en ello. Dado que la plataforma Scribe Augmented Document Remediation se basa en el aprendizaje automático, a medida que recibamos más documentos y presentaciones de diapositivas con gráficos complejos, podremos entrenar nuestro modelo para hacer que esos gráficos sean accesibles. Pero, por ahora, tendrás que probarlo y comprobarlo.
 
-## Does Scribe for Meetings work with meeting platforms other than Zoom and Microsoft Teams, like Jitsi Meet, Google Meet, Slack, Amazon Chime, or BlueJeans?
+## ¿Scribe for Meetings funciona con plataformas de reuniones distintas de Zoom y Microsoft Teams, como Jitsi Meet, Google Meet, Slack, Amazon Chime o BlueJeans?
 
-Not yet, but it will soon.
+Todavía no, pero pronto lo hará.
 
-## How do people within our organization log into Scribe for Meetings?
+## ¿Cómo inician sesión en Scribe for Meetings las personas de nuestra organización?
 
-Scribe for Meetings currently supports two options for authentication. The simplest option is our email-based login process. Just enter your email address, and we’ll send a link that you can use to log in; no password is needed. For organizations with more stringent security requirements, we can also integrate with single sign-on (SSO) systems that implement the SAML standard, either via the [InCommon](https://www.incommon.org/) federation or using bilateral metadata exchange. Our SAML service provider uses the open-source Shibboleth SP package and was implemented in partnership with [Signet, Inc.,](https://www.signet.id/) an identity management and access control firm founded by an architect of Shibboleth. Note that we support SSO through a variety of identity providers; in addition to Shibboleth IdP, we’ve tested with Azure Active Directory. When your organization signs up with Scribe for Meetings, we’ll offer SSO onboarding, covered by the setup fee.
+Scribe for Meetings admite actualmente dos opciones de autenticación. La opción más sencilla es nuestro proceso de inicio de sesión basado en el correo electrónico. Sólo tiene que introducir su dirección de correo electrónico y le enviaremos un enlace que puede utilizar para iniciar sesión; no necesita contraseña. Para organizaciones con requisitos de seguridad más estrictos, también podemos integrarnos con sistemas de inicio de sesión único (SSO) que apliquen la norma SAML, ya sea a través de la federación [InCommon](https://www.incommon.org/) o mediante el intercambio bilateral de metadatos. Nuestro proveedor de servicios SAML utiliza el paquete de código abierto Shibboleth SP y se implementó en colaboración con [Signet, Inc.](https://www.signet.id/), una empresa de gestión de identidades y control de accesos fundada por un arquitecto de Shibboleth. Tenga en cuenta que soportamos SSO a través de una variedad de proveedores de identidad; además de Shibboleth IdP, hemos probado con Azure Active Directory. Cuando su organización se registre en Scribe for Meetings, le ofreceremos la incorporación de SSO, cubierta por la tarifa de configuración.
 
-## What is the future of Scribe for Meetings?
+## ¿Cuál es el futuro de Scribe for Meetings?
 
-Scribe, the platform behind our Scribe line of products, is actively learning every time a document is processed. The machine learning powered Augmented Document Remediation technology gets smarter with each page, moving us that much closer to 100% accuracy. The benefits spill over into all our products, making Scribe for Meetings an application that will only get better the more you use it.
+Scribe, la plataforma que sustenta nuestra línea de productos Scribe, aprende activamente cada vez que se procesa un documento. La tecnología Augmented Document Remediation, basada en el aprendizaje automático, se vuelve más inteligente con cada página, lo que nos acerca mucho más a una precisión del 100%. Las ventajas se extienden a todos nuestros productos, lo que convierte a Scribe for Meetings en una aplicación que solo mejorará cuanto más la utilice.
