--- a/src/content/docs/fr/faq.mdx
+++ b/src/content/docs/fr/faq.mdx
@@ -1,139 +1,139 @@
 ---
-title: Frequently Asked questions
+title: Questions fréquemment posées
 ---
 
-Here are answers to some common questions concerning Scribe for Meetings. When faced with an issue, please refer to this document whenever possible.  
-Don’t see your question? [Contact us.](https://pneumasolutions.com/contact/), and let’s get you squared away.
+Voici les réponses à certaines questions courantes concernant Scribe for Meetings. En cas de problème, veuillez vous référer à ce document dans la mesure du possible.  
+Vous ne trouvez pas votre question ? [Contactez-nous (https://pneumasolutions.com/contact/), et nous vous aiderons à résoudre votre problème.
 
-## What is Scribe for Meetings?
+## Qu'est-ce que Scribe for Meetings ?
 
-Scribe for Meetings is a cloud-based technology that takes a shared presentation on platforms like Zoom, Microsoft Teams, Google Meet, and others and renders it into an accessible presentation in real time for print-impaired individuals.
+Scribe for Meetings est une technologie basée sur le cloud qui prend une présentation partagée sur des plateformes telles que Zoom, Microsoft Teams, Google Meet, et d'autres, et la rend accessible en temps réel aux personnes incapables de lire les imprimés.
 
-## Who benefits from Scribe for Meetings?
+## Qui bénéficie de Scribe for Meetings ?
 
-First and most importantly, the millions of print-impaired persons who would otherwise not benefit from the information being presented; and, the masses of businesses large and small, government agencies, all levels of education,, and organizations who know little about accessibility but would like an affordable means of making their content more inclusive.
+D'abord et surtout, les millions de personnes incapables de lire les imprimés qui, autrement, ne bénéficieraient pas des informations présentées ; et les masses d'entreprises, grandes et petites, les agences gouvernementales, tous les niveaux d'éducation, et les organisations qui en savent peu sur l'accessibilité mais qui voudraient un moyen abordable de rendre leur contenu plus inclusif.
 
-## Why should I choose Scribe for Meetings over other products?
+## Pourquoi devrais-je choisir Scribe for Meetings plutôt que d'autres produits ?
 
-We’re confident there is nothing else out there that does what we do quite the way we do it. Scribe for Meetings is the first technology of its kind to synchronize with meeting platforms in real time. Sure, competitors will take note and likely roll out their imitations, and we look forward to the competition ,but unless they plan on competing on price, we feel confident you will find what you need right here.
+Nous sommes convaincus qu'il n'y a rien d'autre sur le marché qui fasse ce que nous faisons de la manière dont nous le faisons. Scribe for Meetings est la première technologie de ce type à se synchroniser avec les plateformes de réunion en temps réel. Bien sûr, les concurrents en prendront note et lanceront probablement leurs imitations, et nous attendons avec impatience la concurrence, mais à moins qu'ils ne prévoient de rivaliser sur les prix, nous sommes convaincus que vous trouverez ce dont vous avez besoin ici même.
 
-## How does Scribe for Meetings work?
+## Comment fonctionne Scribe for Meetings ?
 
-If you are the host:
-1. Visit [ScribeForMeetings.com,](https://scribeformeetings.com) paste the invite link for your meeting, and press “Go”.
-1. Click the button to register your meeting.
-1. If prompted, enter your email address to log in. If you’re using Scribe for Meetings on behalf of an organization, make sure to use your email address provided by that organization. If your organization has integrated Scribe for Meetings with a single sign-on (SSO) system, then you’ll be taken to the normal login process for your organization, or possibly logged in automatically. Otherwise, we’ll send you an email with a link that you can use to log into Scribe for Meetings.
-1. Enter a name for your meeting, select your PowerPoint slide deck, and press “Submit”.
-    NOTE: Scribe for Meetings currently supports Zoom meetings, Zoom webinars and Microsoft Teams. Sign up to our email list to receive a notification when we add features and additional meeting platforms.
+Si vous êtes l'hôte :
+1. Visitez [ScribeForMeetings.com,](https://scribeformeetings.com) collez le lien d'invitation pour votre réunion, et appuyez sur "Go".
+1. Cliquez sur le bouton pour enregistrer votre réunion.
+1. Si vous y êtes invité, entrez votre adresse électronique pour vous connecter. Si vous utilisez Scribe for Meetings au nom d'une organisation, assurez-vous d'utiliser l'adresse électronique fournie par cette organisation. Si votre organisation a intégré Scribe for Meetings à un système d'authentification unique (SSO), vous serez dirigé vers le processus de connexion normal de votre organisation, ou peut-être connecté automatiquement. Sinon, nous vous enverrons un e-mail contenant un lien que vous pourrez utiliser pour vous connecter à Scribe for Meetings.
+1. Saisissez un nom pour votre réunion, sélectionnez votre diaporama PowerPoint et appuyez sur "Soumettre".
+    REMARQUE : Scribe for Meetings prend actuellement en charge les réunions Zoom, les webinaires Zoom et Microsoft Teams. Inscrivez-vous à notre liste de diffusion pour recevoir une notification lorsque nous ajoutons des fonctionnalités et des plates-formes de réunion supplémentaires.
 
-Your content will be ready to launch within minutes. No knowledge of creating accessible presentations is required. As the host, you don’t need to run extra software on your device, and content can be uploaded as little as 5 minutes before the meeting.
-For the print-impaired meeting attendee, navigate to https://www.ScribeForMeetings.com, paste in your Zoom or Microsoft Teams invite link, and press “Go”. Alternatively, your meeting host might have given you a direct link to Scribe for Meetings, either in the invitation email or in the meeting itself via chat. Whichever way you get there, you’re now ready to follow along with the presentation in any web browser on any platform.
+Votre contenu sera prêt à être lancé en quelques minutes. Aucune connaissance en matière de création de présentations accessibles n'est requise. En tant qu'hôte, vous n'avez pas besoin d'exécuter de logiciel supplémentaire sur votre appareil, et le contenu peut être téléchargé 5 minutes seulement avant la réunion.
+Pour les personnes incapables de lire les imprimés, rendez-vous sur https://www.ScribeForMeetings.com, collez le lien d'invitation de Zoom ou de Microsoft Teams et cliquez sur "Go". Il se peut également que l'organisateur de la réunion vous ait fourni un lien direct vers Scribe for Meetings, soit dans l'e-mail d'invitation, soit au cours de la réunion elle-même, par le biais d'un chat. Quel que soit le moyen utilisé, vous êtes maintenant prêt à suivre la présentation dans n'importe quel navigateur web sur n'importe quelle plateforme.
 
-## How difficult is it to install Scribe for Meetings?
+## Quelle est la difficulté d'installation de Scribe for Meetings ?
 
-Scribe for Meetings is not an installed application. It is a cloud service, so nothing more than a browser is needed to enjoy a meeting. For presenters, Other than uploading their content in advance of the meeting, the process was intentionally designed to be simple. There is nothing to install to your computer or device other than Zoom, Microsoft Teams or similar meeting platforms.
-Enterprise customers can host Scribe for Meetings on their own servers. Please get in touch with us for details.
+Scribe for Meetings n'est pas une application installée. Il s'agit d'un service en nuage, de sorte que rien d'autre qu'un navigateur n'est nécessaire pour profiter d'une réunion. Pour les présentateurs, hormis le téléchargement de leur contenu avant la réunion, le processus a été intentionnellement conçu pour être simple. Il n'y a rien à installer sur votre ordinateur ou votre appareil autre que Zoom, Microsoft Teams ou des plateformes de réunion similaires.
+Les entreprises peuvent héberger Scribe for Meetings sur leurs propres serveurs. Veuillez nous contacter pour plus de détails.
 
-## I see an attendee named “Scribe for Meetings” trying to join my meeting. What’s going on?
+## Je vois un participant nommé "Scribe for Meetings" qui essaie de rejoindre ma réunion. Que se passe-t-il ?
 
-That’s the Scribe bot. This bot watches the screen in your meeting, so it can see what slide is currently being displayed and provide the accessible version of that slide in real time to print-impaired attendees. The Scribe bot will not disrupt your meeting in any way, and it will not collect any information other than what content is currently being displayed through screen sharing. If your meeting has a waiting room, please promptly admit the Scribe bot into the meeting. Otherwise, Scribe for Meetings will not work.
+Il s'agit du robot Scribe. Ce robot surveille l'écran de votre réunion, afin de voir quelle diapositive est actuellement affichée et d'en fournir la version accessible en temps réel aux participants incapables de lire les imprimés. Le robot Scribe ne perturbera en rien votre réunion et ne recueillera aucune information autre que le contenu actuellement affiché par le biais du partage d'écran. Si votre réunion dispose d'une salle d'attente, veuillez admettre rapidement le robot Scribe dans la réunion. Sinon, Scribe for Meetings ne fonctionnera pas.
 
-## I’m a print-impaired meeting attendee, and I don’t know if the meeting I’m attending has been registered through Scribe for Meetings. What can I do?
+## Je participe à une réunion avec des personnes incapables de lire les imprimés et je ne sais pas si la réunion à laquelle j'assiste a été enregistrée par Scribe for Meetings. Que dois-je faire ?
 
-Go to [ScribeForMeetings.com](https://scribeformeetings.com), paste in the Zoom or Microsoft Teams invite link for your meeting, and press “Go”. If the meeting has been registered with Scribe for Meetings, then you’re ready to follow along with accessible slides. If not, you can sign up to be notified by email when the meeting has been registered with Scribe for Meetings.
+Rendez-vous sur [ScribeForMeetings.com] (https://scribeformeetings.com), collez le lien d'invitation Zoom ou Microsoft Teams pour votre réunion et appuyez sur "Go". Si la réunion a été enregistrée avec Scribe for Meetings, vous êtes prêt à suivre les diapositives accessibles. Si ce n'est pas le cas, vous pouvez vous inscrire pour être averti par courriel lorsque la réunion a été enregistrée avec Scribe for Meetings.
 
-## I frequently attend Zoom or Microsoft Teams meetings. What’s the easiest way for me to find out if a meeting is registered with Scribe for Meetings, and if it is, view the accessible content?
+## Je participe souvent à des réunions Zoom ou Microsoft Teams. Quel est le moyen le plus simple pour moi de savoir si une réunion est enregistrée avec Scribe for Meetings et, le cas échéant, d'afficher le contenu accessible ?
 
-Scribe for Meetings has an [extension for Chrome and Edge](https://chrome.google.com/webstore/detail/scribe-for-meetings/bikolphfhfiambndbiimigilhfekcfpn) that checks the availability on Scribe for Meetings of any Zoom or Microsoft Teams meeting you attend. With a single hotkey, you can view the accessible content if the meeting is registered, or request a follow-up notification if the meeting is registered with Scribe for Meetings later.
+Scribe for Meetings dispose d'une [extension pour Chrome et Edge] (https://chrome.google.com/webstore/detail/scribe-for-meetings/bikolphfhfiambndbiimigilhfekcfpn) qui vérifie la disponibilité sur Scribe for Meetings de toute réunion Zoom ou Microsoft Teams à laquelle vous participez. À l'aide d'un simple raccourci clavier, vous pouvez afficher le contenu accessible si la réunion est enregistrée, ou demander une notification de suivi si la réunion est enregistrée ultérieurement dans Scribe for Meetings.
 
-## I’m a print-impaired meeting attendee. Do you have any resources to help me ask the meeting host to use Scribe for Meetings?
+## Je participe à une réunion avec des personnes incapables de lire les imprimés. Avez-vous des ressources pour m'aider à demander à l'organisateur de la réunion d'utiliser Scribe for Meetings ?
 
-Yes; check out our [Scribe for Meetings Self-Advocacy Kit](https://sak.scribeformeetings.com). Here you’ll find a variety of pre-written letters that you can personalize, then copy and paste into an email.
+Oui, consultez notre [Kit d'autodéfense Scribe pour les réunions] (https://sak.scribeformeetings.com). Vous y trouverez une variété de lettres pré-écrites que vous pourrez personnaliser, puis copier et coller dans un courriel.
 
-## Can Scribe for Meetings convert a presentation to accessible file formats for offline viewing?
+## Scribe for Meetings peut-il convertir une présentation dans des formats de fichiers accessibles pour une visualisation hors ligne ?
 
-Yes. When creating the meeting, the presenter can optionally choose to provide their presentation for downloading in the following file formats:
-* An accessible web page, with all of the same features as the live presentation, including read aloud
-* Tagged PDF
-* MP3, via text-to-speech in about a dozen languages
-* DAISY, text plus audio
+Oui. Lors de la création de la réunion, le présentateur peut choisir de fournir sa présentation pour le téléchargement dans les formats de fichiers suivants :
+* Une page Web accessible, avec toutes les mêmes fonctionnalités que la présentation en direct, y compris la lecture à haute voix
+* PDF balisé
+* MP3, avec synthèse vocale dans une douzaine de langues
+* DAISY, texte et audio
 * EPUB
 * Microsoft Word
-* Braille: Grade 1, Grade 2, Unified English Braille, and many other languages
+* Braille : Grade 1, Grade 2, Unified English Braille, et beaucoup d'autres langues
 
-The PDF and Microsoft Word options support large print. This option, and other options such as speaking rate for audio output, can be chosen by attendees when they download the slides.
-This feature is not enabled by default; the presenter must choose to allow it. To enable this feature when registering a meeting, check the checkbox called “Allow attendees to download accessible versions of slides.” This choice will only take effect for the meeting currently being registered.
-For a meeting where this feature is enabled, as soon as the presenter has shown a slide, the web page where attendees view accessible slides will include a link called “Download Slides”. To download the slides, an attendee should follow these steps:
-1. Click the “Download Slides” link.
-1. If prompted, enter your email address and follow the instructions to log in.
-1. Choose the accessible format you want.
-1. For some formats, you can optionally customize settings, such as text-to-speech voice, speaking rate, braille translation table, or large print.
-1. Click the “Prepare Download” button.
-1. Watch your email for the download link. For most formats, the email will arrive within a few minutes. Conversion to audio can take much longer, depending on the length of the slide deck, because speech synthesis is a more time-consuming process than other conversions.
+Les options PDF et Microsoft Word prennent en charge les gros caractères. Cette option, ainsi que d'autres options telles que le débit de la sortie audio, peuvent être choisies par les participants lorsqu'ils téléchargent les diapositives.
+Cette fonction n'est pas activée par défaut ; le présentateur doit choisir de l'autoriser. Pour activer cette fonctionnalité lors de l'enregistrement d'une réunion, cochez la case "Autoriser les participants à télécharger des versions accessibles des diapositives" Ce choix ne sera effectif que pour la réunion en cours d'enregistrement.
+Pour une réunion où cette fonctionnalité est activée, dès que le présentateur a montré une diapositive, la page web sur laquelle les participants visualisent les diapositives accessibles comprend un lien intitulé "Télécharger les diapositives". Pour télécharger les diapositives, un participant doit suivre les étapes suivantes :
+1. Cliquez sur le lien "Télécharger les diapositives".
+1. Si vous y êtes invité, entrez votre adresse électronique et suivez les instructions pour vous connecter.
+1. Choisissez le format accessible que vous souhaitez.
+1. Pour certains formats, vous pouvez personnaliser les paramètres, tels que la synthèse vocale, la vitesse d'élocution, la table de traduction en braille ou les gros caractères.
+1. Cliquez sur le bouton "Préparer le téléchargement".
+1. Surveillez votre courrier électronique pour le lien de téléchargement. Pour la plupart des formats, l'e-mail arrivera en quelques minutes. La conversion en format audio peut prendre beaucoup plus de temps, en fonction de la longueur du jeu de diapositives, car la synthèse vocale est un processus qui prend plus de temps que les autres conversions.
 
-## I host many meetings, and I want to allow my attendees to download the slides for all of these meetings. Can I turn this feature on by default?
+## J'organise de nombreuses réunions et je souhaite permettre à mes participants de télécharger les diapositives de toutes ces réunions. Puis-je activer cette fonction par défaut ?
 
-Yes. Follow these steps:
+Oui. Procédez comme suit :
 1. 
-Go to ScribeForMeetings.com.
-1. If there’s a “Log In” link at the top of the page, click it, enter your email address, and follow the instructions to log into Scribe for Meetings.
-1. Click “Settings”, then “Meeting Defaults”.
-1. Check the checkbox called “Allow attendees to download accessible versions of slides”, then click “Save”.
+Rendez-vous sur le site ScribeForMeetings.com.
+1. Si un lien "Connexion" figure en haut de la page, cliquez dessus, saisissez votre adresse électronique et suivez les instructions pour vous connecter à Scribe for Meetings.
+1. Cliquez sur "Paramètres", puis sur "Valeurs par défaut des réunions".
+1. Cochez la case "Permettre aux participants de télécharger des versions accessibles des diapositives", puis cliquez sur "Enregistrer".
 
-## I want to protect my slides from unauthorized copying and distribution. Does Scribe for Meetings support this?
+## Je souhaite protéger mes diapositives contre la copie et la distribution non autorisées. Scribe for Meetings prend-il en charge cette protection ?
 
-Unfortunately, Scribe for Meetings cannot stop your attendees from copying the text of your slides. However, if you don’t allow the slides to be downloaded, it won’t be easy for attendees to copy your slides, because they will have to copy one slide at a time. Also, note that in practice, this is no different from what any attendee can already do by taking screenshots of your slides.
+Malheureusement, Scribe for Meetings ne peut pas empêcher vos participants de copier le texte de vos diapositives. Cependant, si vous n'autorisez pas le téléchargement des diapositives, il ne sera pas facile pour les participants de copier vos diapositives, car ils devront le faire une par une. Notez également qu'en pratique, cela ne diffère pas de ce que tout participant peut déjà faire en prenant des captures d'écran de vos diapositives.
 
-## Is Scribe for Meetings multilingual?
+## Scribe for Meetings est-il multilingue ?
 
-Yes. Scribe for Meetings can render content in any of 140 languages, again with no extra effort from the presenter.
+Oui, Scribe for Meetings peut restituer le contenu dans 140 langues, sans effort supplémentaire de la part du présentateur.
 
-## Do I need to slow down my presentation to make sure that print-impaired attendees can keep up?
+## Dois-je ralentir ma présentation pour m'assurer que les participants incapables de lire les imprimés puissent suivre ?
 
-No. Scribe for Meetings has a feature called Dynamic Visual Representation, or DVR mode for short, that allows print-impaired attendees to read your accessible slides at their own pace. An attendee can pause the live presentation, go back to a slide they’ve already read, move forward at their own pace, and then continue with the live presentation when they’re ready.
-To use DVR mode, the attendee should press either the Suspend Presentation button or the Previous Slide button. These buttons are labeled as such for screen reader users, and for mouse users who hover over them. Visually, they’re at the bottom of the page and look like the Pause and Previous Track buttons in a media player. When the user presses one of these buttons, the live presentation will pause, and for the Previous Slide button, it will return to the previous slide. The user can then use the Previous Slide and Next Slide buttons to go through the slides at their own pace, and the Go Live button to return to the live presentation. These buttons look like the Previous Track, Next Track, and Play buttons in a media player.  
-Note that DVR mode only allows attendees to review slides that have been shown since they joined the presentation. If a print-impaired attendee is late for your presentation, then they missed the same slides that any other late attendee would have missed.
+Scribe for Meetings dispose d'une fonction appelée Représentation visuelle dynamique, ou mode DVR, qui permet aux participants incapables de lire les caractères imprimés de lire vos diapositives accessibles à leur propre rythme. Un participant peut interrompre la présentation en direct, revenir à une diapositive qu'il a déjà lue, avancer à son propre rythme, puis reprendre la présentation en direct lorsqu'il est prêt.
+Pour utiliser le mode DVR, l'invité doit appuyer sur le bouton Suspendre la présentation ou sur le bouton Diapositive précédente. Ces boutons sont identifiés comme tels pour les utilisateurs de lecteurs d'écran et pour les utilisateurs de souris qui les survolent. Visuellement, ils se trouvent en bas de la page et ressemblent aux boutons Pause et Piste précédente d'un lecteur multimédia. Lorsque l'utilisateur appuie sur l'un de ces boutons, la présentation en direct se met en pause et le bouton Diapositive précédente permet de revenir à la diapositive précédente. L'utilisateur peut alors utiliser les boutons Diapositive précédente et Diapositive suivante pour parcourir les diapositives à son propre rythme, et le bouton Aller en direct pour revenir à la présentation en direct. Ces boutons ressemblent aux boutons Piste précédente, Piste suivante et Lecture d'un lecteur multimédia.  
+Notez que le mode DVR ne permet aux participants que de revoir les diapositives qui ont été présentées depuis qu'ils ont rejoint la présentation. Si un participant incapable de lire les imprimés est en retard pour votre présentation, il a manqué les mêmes diapositives que n'importe quel autre participant en retard.
 
-## I have a print-impaired attendee who would benefit from having my content spoken aloud but isn’t comfortable with a full screen reader. Can Scribe for Meetings help?
+## J'ai un participant incapable de lire les imprimés qui bénéficierait de la lecture à haute voix de mon contenu, mais qui n'est pas à l'aise avec un lecteur d'écran complet. Scribe for Meetings peut-il m'aider ?
 
-Yes. Our Read Aloud feature will speak your slides using the voices provided by your user’s device and web browser, while drawing a box around each word as it is spoken to help the user follow along visually. For Windows users, we highly recommend the Microsoft Edge browser for this feature, because Edge offers outstanding voices in several languages, free of charge. However, this feature also works with all other major platforms and browsers, including mobile devices.  
-To start reading the current slide aloud, press the Read Aloud button, which is at the bottom of the screen and looks like a speaker. While Scribe for Meetings is reading the slide aloud, it will show controls to stop reading (the button with a square icon), pause or resume, go back or forward (the buttons that look like Previous Track and Next Track buttons in a media player), speed up and slow down reading, or change the voice. These controls will go away as soon as reading is finished or as soon as the user stops it.  
-Note that Read Aloud and DVR mode (see above) can be used together, to allow print-impaired attendees to read slides both in their own way and at their own pace.
+Oui. Notre fonction de lecture à haute voix prononcera vos diapositives en utilisant les voix fournies par l'appareil et le navigateur Web de l'utilisateur, tout en dessinant un cadre autour de chaque mot au fur et à mesure qu'il est prononcé afin d'aider l'utilisateur à suivre visuellement. Pour les utilisateurs de Windows, nous recommandons vivement le navigateur Microsoft Edge pour cette fonction, car il offre gratuitement des voix exceptionnelles dans plusieurs langues. Cependant, cette fonction fonctionne également avec toutes les autres plateformes et navigateurs principaux, y compris les appareils mobiles.  
+Pour commencer à lire la diapositive en cours à haute voix, appuyez sur le bouton Lire à haute voix, qui se trouve en bas de l'écran et qui ressemble à un haut-parleur. Pendant que Scribe for Meetings lit la diapositive à haute voix, il affichera des commandes pour arrêter la lecture (le bouton avec une icône carrée), mettre en pause ou reprendre, revenir en arrière ou en avant (les boutons qui ressemblent aux boutons Piste précédente et Piste suivante d'un lecteur multimédia), accélérer et ralentir la lecture, ou changer la voix. Ces commandes disparaîtront dès que la lecture sera terminée ou que l'utilisateur l'arrêtera.  
+Notez que le mode Lecture à voix haute et le mode DVR (voir ci-dessus) peuvent être utilisés ensemble pour permettre aux participants incapables de lire les caractères imprimés de lire les diapositives à leur manière et à leur rythme.
 
-## I have a print-impaired attendee who needs my slides in a large font but doesn’t need a full-screen magnification program. Can Scribe for Meetings help?
+## J'ai un participant incapable de lire les caractères imprimés qui a besoin de mes diapositives en gros caractères, mais qui n'a pas besoin d'un programme d'agrandissement en plein écran. Scribe for Meetings peut-il m'aider ?
 
-Yes. Scribe for Meetings displays your slides in a way that makes them accessible for attendees with all types of content requirements. If large fonts are needed, an attendee can use their browser’s page zoom feature to adjust the font size of the slides, without requiring the user to continually scroll back and forth. Scribe for Meetings will also automatically display the text in the user’s preferred color scheme, whether it’s the usual dark-on-light, light-on-dark (also known as dark mode), or a custom scheme.  
+Oui. Scribe for Meetings affiche vos diapositives de manière à les rendre accessibles aux participants ayant besoin de tout type de contenu. Si des polices de grande taille sont nécessaires, un participant peut utiliser la fonction de zoom de son navigateur pour ajuster la taille de la police des diapositives, sans que l'utilisateur n'ait à faire défiler continuellement les diapositives d'avant en arrière. Scribe for Meetings affichera également automatiquement le texte dans le schéma de couleurs préféré de l'utilisateur, qu'il s'agisse du schéma habituel foncé sur clair, clair sur foncé (également connu sous le nom de mode sombre), ou d'un schéma personnalisé.  
 
-## Wait! What’s going on here? Why do my slides look so different in Scribe for Meetings than they do in my presentation?
+## Attendez ! Que se passe-t-il ici ? Pourquoi mes diapositives sont-elles si différentes dans Scribe for Meetings que dans ma présentation ?
 
-Every aspect of how Scribe for Meetings displays your slides is optimized for accessibility, for attendees with all types of print impairments. Since Scribe for Meetings is meant to be used alongside your existing meeting platform, attendees are always free to flip back to the main meeting window to see the slides as they’re displayed in your presentation without accessibility.
+Chaque aspect de l'affichage de vos diapositives par Scribe for Meetings est optimisé pour l'accessibilité, pour les participants ayant des difficultés à lire les caractères. Étant donné que Scribe for Meetings est conçu pour être utilisé parallèlement à votre plateforme de réunion existante, les participants sont toujours libres de revenir à la fenêtre principale de la réunion pour voir les diapositives telles qu'elles sont affichées dans votre présentation sans accessibilité.
 
-## I don’t use PowerPoint. Can I still make my presentation accessible with Scribe for Meetings?
+## Je n'utilise pas PowerPoint. Puis-je quand même rendre ma présentation accessible avec Scribe for Meetings ?
 
-Scribe for Meetings can make your screen-shared slides accessible no matter what app you use to present them, as long as you can provide your slide deck in PowerPoint format. Other presentation apps such as Keynote and Google Slides can convert their slide decks to PowerPoint format, so you can use these with Scribe for Meetings.
+Scribe for Meetings peut rendre vos diapositives partagées accessibles, quelle que soit l'application que vous utilisez pour les présenter, à condition que vous puissiez fournir votre jeu de diapositives au format PowerPoint. D'autres applications de présentation telles que Keynote et Google Slides peuvent convertir leurs jeux de diapositives au format PowerPoint, vous pouvez donc les utiliser avec Scribe for Meetings.
 
-## Scribe for Meetings isn’t showing the accessible versions of my slides during the presentation, or it’s skipping some slides. What’s wrong?
+## Scribe for Meetings n'affiche pas les versions accessibles de mes diapositives pendant la présentation, ou en saute certaines. Que se passe-t-il ?
 
-Make sure that you’re presenting your slides in a full-screen slide show, and that you’ve set up Zoom or Microsoft Teams screen sharing to share that slide show with your audience. If you’re using PowerPoint for Windows to run your presentation, then once you’ve opened PowerPoint, make sure you press F5 to enter slide show mode.
-[Learn more about how to use Zoom screen sharing with PowerPoint.](https://support.zoom.us/hc/en-us/articles/203395347-Screen-Sharing-a-PowerPoint-Presentation)
-[Learn how to use Microsoft Teams screen sharing with PowerPoint.](https://support.microsoft.com/en-us/office/share-powerpoint-slides-in-a-teams-meeting-fc5a5394-2159-419c-bc59-1f64c1f4e470)
+Assurez-vous que vous présentez vos diapositives dans un diaporama plein écran et que vous avez configuré le partage d'écran Zoom ou Microsoft Teams pour partager ce diaporama avec votre public. Si vous utilisez PowerPoint pour Windows pour exécuter votre présentation, une fois que vous avez ouvert PowerPoint, appuyez sur F5 pour passer en mode diaporama.
+(En savoir plus sur l'utilisation du partage d'écran Zoom avec PowerPoint) (https://support.zoom.us/hc/en-us/articles/203395347-Screen-Sharing-a-PowerPoint-Presentation)
+[En savoir plus sur l'utilisation du partage d'écran Microsoft Teams avec PowerPoint](https://support.microsoft.com/en-us/office/share-powerpoint-slides-in-a-teams-meeting-fc5a5394-2159-419c-bc59-1f64c1f4e470)
 
-## How does Scribe for Meetings handle pictures and graphics in my slides?
+## Comment Scribe for Meetings gère-t-il les images et les graphiques dans mes diapositives ?
 
-If you already wrote descriptions (also known as alt tags or captions) for the graphical content in your slides, Scribe for Meetings will use those. Otherwise, Scribe for Meetings will use a cloud-based image description service powered by machine learning to automatically add alt tags for your graphics. If those pictures contain text, Scribe for Meetings will also use optical character recognition (OCR) to make that text accessible.
+Si vous avez déjà rédigé des descriptions (également appelées balises alt ou légendes) pour le contenu graphique de vos diapositives, Scribe for Meetings les utilisera. Dans le cas contraire, Scribe for Meetings utilisera un service de description d'images basé sur le cloud et basé sur l'apprentissage automatique pour ajouter automatiquement des balises alt pour vos graphiques. Si ces images contiennent du texte, Scribe for Meetings utilisera également la reconnaissance optique de caractères (OCR) pour rendre ce texte accessible.
 
-## My slides have charts, diagrams, or other complex graphics. Can Scribe for Meetings handle them?
+## Mes diapositives contiennent des tableaux, des diagrammes ou d'autres graphiques complexes. Scribe for Meetings peut-il les gérer ?
 
-The short answer is, not for the most part. We’re still working on this. Because the Scribe Augmented Document Remediation platform is powered by machine learning, as we receive more documents and slide decks with complex graphics, we’ll be able to train our model to make those graphics accessible. But, for now, you’ll just have to try it and see.
+La réponse courte est : non, pour la plupart. Nous travaillons encore sur ce point. La plateforme de remédiation des documents augmentés de Scribe étant alimentée par l'apprentissage automatique, au fur et à mesure que nous recevrons des documents et des diapositives contenant des graphiques complexes, nous serons en mesure d'entraîner notre modèle à rendre ces graphiques accessibles. Mais pour l'instant, vous n'avez qu'à essayer pour voir.
 
-## Does Scribe for Meetings work with meeting platforms other than Zoom and Microsoft Teams, like Jitsi Meet, Google Meet, Slack, Amazon Chime, or BlueJeans?
+## Scribe for Meetings fonctionne-t-il avec des plateformes de réunion autres que Zoom et Microsoft Teams, comme Jitsi Meet, Google Meet, Slack, Amazon Chime ou BlueJeans ?
 
-Not yet, but it will soon.
+Pas encore, mais cela ne saurait tarder.
 
-## How do people within our organization log into Scribe for Meetings?
+## Comment les membres de notre organisation se connectent-ils à Scribe for Meetings ?
 
-Scribe for Meetings currently supports two options for authentication. The simplest option is our email-based login process. Just enter your email address, and we’ll send a link that you can use to log in; no password is needed. For organizations with more stringent security requirements, we can also integrate with single sign-on (SSO) systems that implement the SAML standard, either via the [InCommon](https://www.incommon.org/) federation or using bilateral metadata exchange. Our SAML service provider uses the open-source Shibboleth SP package and was implemented in partnership with [Signet, Inc.,](https://www.signet.id/) an identity management and access control firm founded by an architect of Shibboleth. Note that we support SSO through a variety of identity providers; in addition to Shibboleth IdP, we’ve tested with Azure Active Directory. When your organization signs up with Scribe for Meetings, we’ll offer SSO onboarding, covered by the setup fee.
+Scribe for Meetings prend actuellement en charge deux options d'authentification. L'option la plus simple est notre processus de connexion par courrier électronique. Il vous suffit de saisir votre adresse électronique et nous vous enverrons un lien que vous pourrez utiliser pour vous connecter ; aucun mot de passe n'est nécessaire. Pour les organisations ayant des exigences de sécurité plus strictes, nous pouvons également nous intégrer à des systèmes d'authentification unique (SSO) qui mettent en œuvre la norme SAML, soit via la fédération [InCommon] (https://www.incommon.org/), soit en utilisant un échange bilatéral de métadonnées. Notre fournisseur de services SAML utilise le progiciel open-source Shibboleth SP et a été mis en œuvre en partenariat avec [Signet, Inc.](https://www.signet.id/), une société de gestion d'identité et de contrôle d'accès fondée par un architecte de Shibboleth. Notez que nous prenons en charge le SSO par le biais d'une variété de fournisseurs d'identité ; en plus de Shibboleth IdP, nous avons testé Azure Active Directory. Lorsque votre organisation s'inscrit à Scribe for Meetings, nous vous offrons un service d'intégration SSO, couvert par les frais d'installation.
 
-## What is the future of Scribe for Meetings?
+## Quel est l'avenir de Scribe for Meetings ?
 
-Scribe, the platform behind our Scribe line of products, is actively learning every time a document is processed. The machine learning powered Augmented Document Remediation technology gets smarter with each page, moving us that much closer to 100% accuracy. The benefits spill over into all our products, making Scribe for Meetings an application that will only get better the more you use it.
+Scribe, la plateforme qui sous-tend notre gamme de produits Scribe, apprend activement à chaque fois qu'un document est traité. La technologie Augmented Document Remediation, basée sur l'apprentissage automatique, devient plus intelligente à chaque page, nous rapprochant ainsi d'une précision de 100 %. Les avantages se répercutent sur tous nos produits, faisant de Scribe for Meetings une application qui ne fera que s'améliorer au fur et à mesure que vous l'utiliserez.
