--- a/src/content/docs/pt/faq.mdx
+++ b/src/content/docs/pt/faq.mdx
@@ -1,139 +1,139 @@
 ---
-title: Frequently Asked questions
+title: Perguntas frequentes
 ---
 
-Here are answers to some common questions concerning Scribe for Meetings. When faced with an issue, please refer to this document whenever possible.  
-Don’t see your question? [Contact us.](https://pneumasolutions.com/contact/), and let’s get you squared away.
+Aqui estão as respostas para algumas perguntas comuns sobre o Scribe for Meetings. Ao se deparar com um problema, consulte este documento sempre que possível.  
+Não encontrou sua pergunta? [Entre em contato conosco] (https://pneumasolutions.com/contact/) para que possamos esclarecê-la.
 
-## What is Scribe for Meetings?
+## O que é o Scribe for Meetings?
 
-Scribe for Meetings is a cloud-based technology that takes a shared presentation on platforms like Zoom, Microsoft Teams, Google Meet, and others and renders it into an accessible presentation in real time for print-impaired individuals.
+O Scribe for Meetings é uma tecnologia baseada em nuvem que utiliza uma apresentação compartilhada em plataformas como Zoom, Microsoft Teams, Google Meet e outras e a transforma em uma apresentação acessível em tempo real para pessoas com deficiência de impressão.
 
-## Who benefits from Scribe for Meetings?
+## Quem se beneficia com o Scribe for Meetings?
 
-First and most importantly, the millions of print-impaired persons who would otherwise not benefit from the information being presented; and, the masses of businesses large and small, government agencies, all levels of education,, and organizations who know little about accessibility but would like an affordable means of making their content more inclusive.
+Em primeiro lugar, e mais importante, os milhões de pessoas com deficiência de impressão que, de outra forma, não se beneficiariam das informações que estão sendo apresentadas; e as massas de empresas grandes e pequenas, agências governamentais, todos os níveis de educação e organizações que sabem pouco sobre acessibilidade, mas que gostariam de um meio acessível de tornar seu conteúdo mais inclusivo.
 
-## Why should I choose Scribe for Meetings over other products?
+## Por que devo escolher o Scribe for Meetings em vez de outros produtos?
 
-We’re confident there is nothing else out there that does what we do quite the way we do it. Scribe for Meetings is the first technology of its kind to synchronize with meeting platforms in real time. Sure, competitors will take note and likely roll out their imitations, and we look forward to the competition ,but unless they plan on competing on price, we feel confident you will find what you need right here.
+Temos certeza de que não há nada no mercado que faça o que fazemos da mesma forma que nós. O Scribe for Meetings é a primeira tecnologia do gênero a sincronizar-se com plataformas de reuniões em tempo real. É claro que os concorrentes tomarão nota e provavelmente lançarão suas imitações, e estamos ansiosos pela concorrência, mas, a menos que eles planejem competir em termos de preço, temos certeza de que você encontrará o que precisa aqui mesmo.
 
-## How does Scribe for Meetings work?
+## Como funciona o Scribe for Meetings?
 
-If you are the host:
-1. Visit [ScribeForMeetings.com,](https://scribeformeetings.com) paste the invite link for your meeting, and press “Go”.
-1. Click the button to register your meeting.
-1. If prompted, enter your email address to log in. If you’re using Scribe for Meetings on behalf of an organization, make sure to use your email address provided by that organization. If your organization has integrated Scribe for Meetings with a single sign-on (SSO) system, then you’ll be taken to the normal login process for your organization, or possibly logged in automatically. Otherwise, we’ll send you an email with a link that you can use to log into Scribe for Meetings.
-1. Enter a name for your meeting, select your PowerPoint slide deck, and press “Submit”.
-    NOTE: Scribe for Meetings currently supports Zoom meetings, Zoom webinars and Microsoft Teams. Sign up to our email list to receive a notification when we add features and additional meeting platforms.
+Se você for o anfitrião:
+1. Visite [ScribeForMeetings.com,](https://scribeformeetings.com) cole o link do convite para sua reunião e pressione "Go" (Ir).
+1. Clique no botão para registrar a reunião.
+1. Se solicitado, digite seu endereço de e-mail para fazer login. Se estiver usando o Scribe for Meetings em nome de uma organização, certifique-se de usar o endereço de e-mail fornecido por essa organização. Se a sua organização tiver integrado o Scribe for Meetings a um sistema de logon único (SSO), você será direcionado ao processo de login normal da sua organização ou, possivelmente, fará o login automaticamente. Caso contrário, enviaremos um e-mail com um link que você poderá usar para fazer login no Scribe for Meetings.
+1. Digite um nome para sua reunião, selecione o conjunto de slides do PowerPoint e pressione "Submit" (Enviar).
+    OBSERVAÇÃO: Atualmente, o Scribe for Meetings é compatível com reuniões do Zoom, webinars do Zoom e Microsoft Teams. Inscreva-se em nossa lista de e-mails para receber uma notificação quando adicionarmos recursos e plataformas de reunião adicionais.
 
-Your content will be ready to launch within minutes. No knowledge of creating accessible presentations is required. As the host, you don’t need to run extra software on your device, and content can be uploaded as little as 5 minutes before the meeting.
-For the print-impaired meeting attendee, navigate to https://www.ScribeForMeetings.com, paste in your Zoom or Microsoft Teams invite link, and press “Go”. Alternatively, your meeting host might have given you a direct link to Scribe for Meetings, either in the invitation email or in the meeting itself via chat. Whichever way you get there, you’re now ready to follow along with the presentation in any web browser on any platform.
+Seu conteúdo estará pronto para ser lançado em minutos. Não é necessário ter conhecimento sobre a criação de apresentações acessíveis. Como anfitrião, você não precisa executar nenhum software adicional em seu dispositivo, e o conteúdo pode ser carregado apenas 5 minutos antes da reunião.
+Para o participante da reunião com deficiência de impressão, navegue até https://www.ScribeForMeetings.com, cole o link do convite do Zoom ou do Microsoft Teams e pressione "Go" (Ir). Como alternativa, o anfitrião da reunião pode ter fornecido um link direto para o Scribe for Meetings, seja no e-mail de convite ou na própria reunião, via chat. Seja qual for o caminho, agora você está pronto para acompanhar a apresentação em qualquer navegador da Web e em qualquer plataforma.
 
-## How difficult is it to install Scribe for Meetings?
+## Qual é o grau de dificuldade para instalar o Scribe for Meetings?
 
-Scribe for Meetings is not an installed application. It is a cloud service, so nothing more than a browser is needed to enjoy a meeting. For presenters, Other than uploading their content in advance of the meeting, the process was intentionally designed to be simple. There is nothing to install to your computer or device other than Zoom, Microsoft Teams or similar meeting platforms.
-Enterprise customers can host Scribe for Meetings on their own servers. Please get in touch with us for details.
+O Scribe for Meetings não é um aplicativo instalado. É um serviço de nuvem, portanto, não é necessário nada mais do que um navegador para participar de uma reunião. Para os apresentadores, além de fazer o upload de seu conteúdo antes da reunião, o processo foi intencionalmente projetado para ser simples. Não há nada para instalar em seu computador ou dispositivo além do Zoom, Microsoft Teams ou plataformas de reunião semelhantes.
+Os clientes corporativos podem hospedar o Scribe for Meetings em seus próprios servidores. Entre em contato conosco para obter detalhes.
 
-## I see an attendee named “Scribe for Meetings” trying to join my meeting. What’s going on?
+## Vejo um participante chamado "Scribe for Meetings" tentando entrar em minha reunião. O que está acontecendo?
 
-That’s the Scribe bot. This bot watches the screen in your meeting, so it can see what slide is currently being displayed and provide the accessible version of that slide in real time to print-impaired attendees. The Scribe bot will not disrupt your meeting in any way, and it will not collect any information other than what content is currently being displayed through screen sharing. If your meeting has a waiting room, please promptly admit the Scribe bot into the meeting. Otherwise, Scribe for Meetings will not work.
+Esse é o bot do Scribe. Esse bot observa a tela da sua reunião, para que possa ver qual slide está sendo exibido no momento e fornecer a versão acessível desse slide em tempo real para os participantes com deficiência de impressão. O bot Scribe não interromperá a reunião de forma alguma e não coletará nenhuma informação além do conteúdo que está sendo exibido no momento por meio do compartilhamento de tela. Se a sua reunião tiver uma sala de espera, permita que o bot do Scribe entre imediatamente na reunião. Caso contrário, o Scribe for Meetings não funcionará.
 
-## I’m a print-impaired meeting attendee, and I don’t know if the meeting I’m attending has been registered through Scribe for Meetings. What can I do?
+## Sou um participante de reunião com deficiência de impressão e não sei se a reunião da qual estou participando foi registrada pelo Scribe for Meetings. O que posso fazer?
 
-Go to [ScribeForMeetings.com](https://scribeformeetings.com), paste in the Zoom or Microsoft Teams invite link for your meeting, and press “Go”. If the meeting has been registered with Scribe for Meetings, then you’re ready to follow along with accessible slides. If not, you can sign up to be notified by email when the meeting has been registered with Scribe for Meetings.
+Acesse [ScribeForMeetings.com] (https://scribeformeetings.com), cole o link de convite do Zoom ou do Microsoft Teams para sua reunião e pressione "Go" (Ir). Se a reunião tiver sido registrada no Scribe for Meetings, você estará pronto para acompanhar os slides acessíveis. Caso contrário, você pode se inscrever para ser notificado por e-mail quando a reunião tiver sido registrada no Scribe for Meetings.
 
-## I frequently attend Zoom or Microsoft Teams meetings. What’s the easiest way for me to find out if a meeting is registered with Scribe for Meetings, and if it is, view the accessible content?
+## Eu participo frequentemente de reuniões do Zoom ou do Microsoft Teams. Qual é a maneira mais fácil de descobrir se uma reunião está registrada no Scribe for Meetings e, se estiver, visualizar o conteúdo acessível?
 
-Scribe for Meetings has an [extension for Chrome and Edge](https://chrome.google.com/webstore/detail/scribe-for-meetings/bikolphfhfiambndbiimigilhfekcfpn) that checks the availability on Scribe for Meetings of any Zoom or Microsoft Teams meeting you attend. With a single hotkey, you can view the accessible content if the meeting is registered, or request a follow-up notification if the meeting is registered with Scribe for Meetings later.
+O Scribe for Meetings tem uma [extensão para Chrome e Edge] (https://chrome.google.com/webstore/detail/scribe-for-meetings/bikolphfhfiambndbiimigilhfekcfpn) que verifica a disponibilidade no Scribe for Meetings de qualquer reunião do Zoom ou do Microsoft Teams de que você participe. Com uma única tecla de atalho, você pode visualizar o conteúdo acessível se a reunião estiver registrada ou solicitar uma notificação de acompanhamento se a reunião for registrada no Scribe for Meetings posteriormente.
 
-## I’m a print-impaired meeting attendee. Do you have any resources to help me ask the meeting host to use Scribe for Meetings?
+## Sou um participante de reunião com deficiência de impressão. Vocês têm algum recurso para me ajudar a pedir ao anfitrião da reunião que use o Scribe for Meetings?
 
-Yes; check out our [Scribe for Meetings Self-Advocacy Kit](https://sak.scribeformeetings.com). Here you’ll find a variety of pre-written letters that you can personalize, then copy and paste into an email.
+Sim; dê uma olhada em nosso [Scribe for Meetings Self-Advocacy Kit] (https://sak.scribeformeetings.com). Aqui você encontrará uma variedade de cartas pré-escritas que podem ser personalizadas, copiadas e coladas em um e-mail.
 
-## Can Scribe for Meetings convert a presentation to accessible file formats for offline viewing?
+## O Scribe for Meetings pode converter uma apresentação em formatos de arquivo acessíveis para visualização off-line?
 
-Yes. When creating the meeting, the presenter can optionally choose to provide their presentation for downloading in the following file formats:
-* An accessible web page, with all of the same features as the live presentation, including read aloud
-* Tagged PDF
-* MP3, via text-to-speech in about a dozen languages
-* DAISY, text plus audio
+Sim. Ao criar a reunião, o apresentador pode optar por fornecer sua apresentação para download nos seguintes formatos de arquivo:
+* Uma página da Web acessível, com todos os mesmos recursos da apresentação ao vivo, incluindo leitura em voz alta
+* PDF com tags
+* MP3, via conversão de texto em fala em cerca de uma dúzia de idiomas
+* DAISY, texto e áudio
 * EPUB
 * Microsoft Word
-* Braille: Grade 1, Grade 2, Unified English Braille, and many other languages
+* Braille: Grau 1, Grau 2, Braille em inglês unificado e muitos outros idiomas
 
-The PDF and Microsoft Word options support large print. This option, and other options such as speaking rate for audio output, can be chosen by attendees when they download the slides.
-This feature is not enabled by default; the presenter must choose to allow it. To enable this feature when registering a meeting, check the checkbox called “Allow attendees to download accessible versions of slides.” This choice will only take effect for the meeting currently being registered.
-For a meeting where this feature is enabled, as soon as the presenter has shown a slide, the web page where attendees view accessible slides will include a link called “Download Slides”. To download the slides, an attendee should follow these steps:
-1. Click the “Download Slides” link.
-1. If prompted, enter your email address and follow the instructions to log in.
-1. Choose the accessible format you want.
-1. For some formats, you can optionally customize settings, such as text-to-speech voice, speaking rate, braille translation table, or large print.
-1. Click the “Prepare Download” button.
-1. Watch your email for the download link. For most formats, the email will arrive within a few minutes. Conversion to audio can take much longer, depending on the length of the slide deck, because speech synthesis is a more time-consuming process than other conversions.
+As opções PDF e Microsoft Word suportam impressão em tamanho grande. Essa opção e outras opções, como a velocidade de fala para saída de áudio, podem ser escolhidas pelos participantes quando eles baixarem os slides.
+Esse recurso não é ativado por padrão; o apresentador deve optar por permiti-lo. Para ativar esse recurso ao registrar uma reunião, marque a caixa de seleção "Permitir que os participantes façam download de versões acessíveis dos slides" Essa opção só terá efeito para a reunião que está sendo registrada no momento.
+Em uma reunião em que esse recurso estiver ativado, assim que o apresentador mostrar um slide, a página da Web em que os participantes visualizam os slides acessíveis incluirá um link chamado "Download Slides". Para fazer o download dos slides, o participante deve seguir estas etapas:
+1. Clique no link "Download Slides".
+1. Se solicitado, digite seu endereço de e-mail e siga as instruções para fazer login.
+1. Escolha o formato acessível que você deseja.
+1. Para alguns formatos, você pode opcionalmente personalizar as configurações, como voz de conversão de texto em fala, velocidade de fala, tabela de tradução em braile ou impressão em tamanho grande.
+1. Clique no botão "Preparar download".
+1. Observe seu e-mail para ver o link de download. Para a maioria dos formatos, o e-mail chegará em alguns minutos. A conversão para áudio pode levar muito mais tempo, dependendo da extensão da apresentação de slides, porque a síntese de fala é um processo mais demorado do que outras conversões.
 
-## I host many meetings, and I want to allow my attendees to download the slides for all of these meetings. Can I turn this feature on by default?
+## Realizo muitas reuniões e quero permitir que meus participantes baixem os slides de todas essas reuniões. Posso ativar esse recurso por padrão?
 
-Yes. Follow these steps:
+Sim. Siga estas etapas:
 1. 
-Go to ScribeForMeetings.com.
-1. If there’s a “Log In” link at the top of the page, click it, enter your email address, and follow the instructions to log into Scribe for Meetings.
-1. Click “Settings”, then “Meeting Defaults”.
-1. Check the checkbox called “Allow attendees to download accessible versions of slides”, then click “Save”.
+Acesse ScribeForMeetings.com.
+1. Se houver um link "Log In" na parte superior da página, clique nele, digite seu endereço de e-mail e siga as instruções para fazer login no Scribe for Meetings.
+1. Clique em "Settings" (Configurações) e depois em "Meeting Defaults" (Padrões de reunião).
+1. Marque a caixa de seleção "Allow attendees to download accessible versions of slides" (Permitir que os participantes baixem versões acessíveis dos slides) e clique em "Save" (Salvar).
 
-## I want to protect my slides from unauthorized copying and distribution. Does Scribe for Meetings support this?
+## Quero proteger meus slides contra cópia e distribuição não autorizadas. O Scribe for Meetings oferece suporte a isso?
 
-Unfortunately, Scribe for Meetings cannot stop your attendees from copying the text of your slides. However, if you don’t allow the slides to be downloaded, it won’t be easy for attendees to copy your slides, because they will have to copy one slide at a time. Also, note that in practice, this is no different from what any attendee can already do by taking screenshots of your slides.
+Infelizmente, o Scribe for Meetings não pode impedir que os participantes copiem o texto de seus slides. Entretanto, se você não permitir que os slides sejam baixados, não será fácil para os participantes copiarem seus slides, pois eles terão que copiar um slide de cada vez. Além disso, observe que, na prática, isso não é diferente do que qualquer participante já pode fazer ao tirar capturas de tela dos seus slides.
 
-## Is Scribe for Meetings multilingual?
+## O Scribe for Meetings é multilíngue?
 
-Yes. Scribe for Meetings can render content in any of 140 languages, again with no extra effort from the presenter.
+Sim. O Scribe for Meetings pode renderizar o conteúdo em qualquer um dos 140 idiomas, novamente sem nenhum esforço extra do apresentador.
 
-## Do I need to slow down my presentation to make sure that print-impaired attendees can keep up?
+## Preciso diminuir a velocidade da minha apresentação para garantir que os participantes com deficiência de impressão possam acompanhá-la?
 
-No. Scribe for Meetings has a feature called Dynamic Visual Representation, or DVR mode for short, that allows print-impaired attendees to read your accessible slides at their own pace. An attendee can pause the live presentation, go back to a slide they’ve already read, move forward at their own pace, and then continue with the live presentation when they’re ready.
-To use DVR mode, the attendee should press either the Suspend Presentation button or the Previous Slide button. These buttons are labeled as such for screen reader users, and for mouse users who hover over them. Visually, they’re at the bottom of the page and look like the Pause and Previous Track buttons in a media player. When the user presses one of these buttons, the live presentation will pause, and for the Previous Slide button, it will return to the previous slide. The user can then use the Previous Slide and Next Slide buttons to go through the slides at their own pace, and the Go Live button to return to the live presentation. These buttons look like the Previous Track, Next Track, and Play buttons in a media player.  
-Note that DVR mode only allows attendees to review slides that have been shown since they joined the presentation. If a print-impaired attendee is late for your presentation, then they missed the same slides that any other late attendee would have missed.
+Não. O Scribe for Meetings tem um recurso chamado Dynamic Visual Representation (Representação Visual Dinâmica), ou modo DVR, que permite que os participantes com deficiência visual leiam seus slides acessíveis em seu próprio ritmo. Um participante pode pausar a apresentação ao vivo, voltar a um slide que já leu, avançar em seu próprio ritmo e continuar a apresentação ao vivo quando estiver pronto.
+Para usar o modo DVR, o participante deve pressionar o botão Suspender apresentação ou o botão Slide anterior. Esses botões são identificados como tal para usuários de leitores de tela e para usuários de mouse que passam o mouse sobre eles. Visualmente, eles estão na parte inferior da página e se parecem com os botões Pausar e Faixa anterior em um reprodutor de mídia. Quando o usuário pressiona um desses botões, a apresentação ao vivo é pausada e, no caso do botão Slide anterior, ela retorna ao slide anterior. O usuário pode então usar os botões Slide anterior e Próximo slide para percorrer os slides no seu próprio ritmo e o botão Ir ao vivo para retornar à apresentação ao vivo. Esses botões se parecem com os botões Previous Track (Faixa anterior), Next Track (Próxima faixa) e Play (Reproduzir) em um reprodutor de mídia.  
+Observe que o modo DVR só permite que os participantes revisem os slides que foram exibidos desde que entraram na apresentação. Se um participante com deficiência de impressão chegar atrasado à sua apresentação, ele perderá os mesmos slides que qualquer outro participante atrasado teria perdido.
 
-## I have a print-impaired attendee who would benefit from having my content spoken aloud but isn’t comfortable with a full screen reader. Can Scribe for Meetings help?
+## Tenho um participante com deficiência de impressão que se beneficiaria de ter meu conteúdo falado em voz alta, mas não se sente confortável com um leitor de tela cheia. O Scribe for Meetings pode ajudar?
 
-Yes. Our Read Aloud feature will speak your slides using the voices provided by your user’s device and web browser, while drawing a box around each word as it is spoken to help the user follow along visually. For Windows users, we highly recommend the Microsoft Edge browser for this feature, because Edge offers outstanding voices in several languages, free of charge. However, this feature also works with all other major platforms and browsers, including mobile devices.  
-To start reading the current slide aloud, press the Read Aloud button, which is at the bottom of the screen and looks like a speaker. While Scribe for Meetings is reading the slide aloud, it will show controls to stop reading (the button with a square icon), pause or resume, go back or forward (the buttons that look like Previous Track and Next Track buttons in a media player), speed up and slow down reading, or change the voice. These controls will go away as soon as reading is finished or as soon as the user stops it.  
-Note that Read Aloud and DVR mode (see above) can be used together, to allow print-impaired attendees to read slides both in their own way and at their own pace.
+Sim. Nosso recurso Ler em voz alta falará seus slides usando as vozes fornecidas pelo dispositivo e pelo navegador da Web do usuário, enquanto desenha uma caixa ao redor de cada palavra à medida que ela é falada para ajudar o usuário a acompanhar visualmente. Para usuários do Windows, recomendamos o navegador Microsoft Edge para esse recurso, pois o Edge oferece vozes excelentes em vários idiomas, gratuitamente. No entanto, esse recurso também funciona em todas as outras plataformas e navegadores principais, inclusive em dispositivos móveis.  
+Para começar a ler o slide atual em voz alta, pressione o botão Ler em voz alta, que fica na parte inferior da tela e se parece com um alto-falante. Enquanto o Scribe for Meetings estiver lendo o slide em voz alta, ele mostrará controles para interromper a leitura (o botão com um ícone de quadrado), pausar ou retomar, voltar ou avançar (os botões que se parecem com os botões de Faixa anterior e Faixa seguinte em um reprodutor de mídia), acelerar e desacelerar a leitura ou alterar a voz. Esses controles desaparecerão assim que a leitura for concluída ou assim que o usuário a interromper.  
+Observe que o modo Ler em voz alta e o modo DVR (veja acima) podem ser usados juntos para permitir que os participantes com deficiência de impressão leiam os slides de sua própria maneira e em seu próprio ritmo.
 
-## I have a print-impaired attendee who needs my slides in a large font but doesn’t need a full-screen magnification program. Can Scribe for Meetings help?
+## Tenho um participante com deficiência de impressão que precisa dos meus slides em uma fonte grande, mas não precisa de um programa de ampliação de tela inteira. O Scribe for Meetings pode ajudar?
 
-Yes. Scribe for Meetings displays your slides in a way that makes them accessible for attendees with all types of content requirements. If large fonts are needed, an attendee can use their browser’s page zoom feature to adjust the font size of the slides, without requiring the user to continually scroll back and forth. Scribe for Meetings will also automatically display the text in the user’s preferred color scheme, whether it’s the usual dark-on-light, light-on-dark (also known as dark mode), or a custom scheme.  
+Sim. O Scribe for Meetings exibe seus slides de forma a torná-los acessíveis a participantes com todos os tipos de necessidades de conteúdo. Se forem necessárias fontes grandes, o participante poderá usar o recurso de zoom da página do navegador para ajustar o tamanho da fonte dos slides, sem exigir que o usuário role continuamente para frente e para trás. O Scribe for Meetings também exibirá automaticamente o texto no esquema de cores preferido do usuário, seja ele o habitual escuro sobre claro, claro sobre escuro (também conhecido como modo escuro) ou um esquema personalizado.  
 
-## Wait! What’s going on here? Why do my slides look so different in Scribe for Meetings than they do in my presentation?
+## Espere! O que está acontecendo aqui? Por que meus slides parecem tão diferentes no Scribe for Meetings do que na minha apresentação?
 
-Every aspect of how Scribe for Meetings displays your slides is optimized for accessibility, for attendees with all types of print impairments. Since Scribe for Meetings is meant to be used alongside your existing meeting platform, attendees are always free to flip back to the main meeting window to see the slides as they’re displayed in your presentation without accessibility.
+Todos os aspectos de como o Scribe for Meetings exibe seus slides são otimizados para acessibilidade, para participantes com todos os tipos de deficiências de impressão. Como o Scribe for Meetings deve ser usado junto com a plataforma de reuniões existente, os participantes sempre podem voltar à janela principal da reunião para ver os slides como são exibidos em sua apresentação sem acessibilidade.
 
-## I don’t use PowerPoint. Can I still make my presentation accessible with Scribe for Meetings?
+## Eu não uso o PowerPoint. Ainda posso tornar minha apresentação acessível com o Scribe for Meetings?
 
-Scribe for Meetings can make your screen-shared slides accessible no matter what app you use to present them, as long as you can provide your slide deck in PowerPoint format. Other presentation apps such as Keynote and Google Slides can convert their slide decks to PowerPoint format, so you can use these with Scribe for Meetings.
+O Scribe for Meetings pode tornar acessíveis os seus slides compartilhados na tela, independentemente do aplicativo que você usar para apresentá-los, desde que você possa fornecer o conjunto de slides no formato PowerPoint. Outros aplicativos de apresentação, como o Keynote e o Google Slides, podem converter suas apresentações de slides para o formato PowerPoint, portanto, você pode usá-los com o Scribe for Meetings.
 
-## Scribe for Meetings isn’t showing the accessible versions of my slides during the presentation, or it’s skipping some slides. What’s wrong?
+## O Scribe for Meetings não está mostrando as versões acessíveis dos meus slides durante a apresentação, ou está pulando alguns slides. O que há de errado?
 
-Make sure that you’re presenting your slides in a full-screen slide show, and that you’ve set up Zoom or Microsoft Teams screen sharing to share that slide show with your audience. If you’re using PowerPoint for Windows to run your presentation, then once you’ve opened PowerPoint, make sure you press F5 to enter slide show mode.
-[Learn more about how to use Zoom screen sharing with PowerPoint.](https://support.zoom.us/hc/en-us/articles/203395347-Screen-Sharing-a-PowerPoint-Presentation)
-[Learn how to use Microsoft Teams screen sharing with PowerPoint.](https://support.microsoft.com/en-us/office/share-powerpoint-slides-in-a-teams-meeting-fc5a5394-2159-419c-bc59-1f64c1f4e470)
+Certifique-se de que esteja apresentando seus slides em uma apresentação de slides em tela cheia e que tenha configurado o compartilhamento de tela do Zoom ou do Microsoft Teams para compartilhar essa apresentação de slides com seu público. Se estiver usando o PowerPoint para Windows para executar sua apresentação, depois de abrir o PowerPoint, certifique-se de pressionar F5 para entrar no modo de apresentação de slides.
+[Saiba mais sobre como usar o compartilhamento de tela do Zoom com o PowerPoint (https://support.zoom.us/hc/en-us/articles/203395347-Screen-Sharing-a-PowerPoint-Presentation)
+[Saiba como usar o compartilhamento de tela do Microsoft Teams com o PowerPoint.](https://support.microsoft.com/en-us/office/share-powerpoint-slides-in-a-teams-meeting-fc5a5394-2159-419c-bc59-1f64c1f4e470)
 
-## How does Scribe for Meetings handle pictures and graphics in my slides?
+## Como o Scribe for Meetings lida com imagens e gráficos em meus slides?
 
-If you already wrote descriptions (also known as alt tags or captions) for the graphical content in your slides, Scribe for Meetings will use those. Otherwise, Scribe for Meetings will use a cloud-based image description service powered by machine learning to automatically add alt tags for your graphics. If those pictures contain text, Scribe for Meetings will also use optical character recognition (OCR) to make that text accessible.
+Se você já escreveu descrições (também conhecidas como alt tags ou legendas) para o conteúdo gráfico em seus slides, o Scribe for Meetings as usará. Caso contrário, o Scribe for Meetings usará um serviço de descrição de imagens baseado em nuvem, com base no aprendizado de máquina, para adicionar automaticamente tags alt aos seus gráficos. Se essas imagens contiverem texto, o Scribe for Meetings também usará o reconhecimento óptico de caracteres (OCR) para tornar esse texto acessível.
 
-## My slides have charts, diagrams, or other complex graphics. Can Scribe for Meetings handle them?
+## Meus slides têm gráficos, diagramas ou outros gráficos complexos. O Scribe for Meetings pode lidar com eles?
 
-The short answer is, not for the most part. We’re still working on this. Because the Scribe Augmented Document Remediation platform is powered by machine learning, as we receive more documents and slide decks with complex graphics, we’ll be able to train our model to make those graphics accessible. But, for now, you’ll just have to try it and see.
+A resposta curta é: na maioria das vezes, não. Ainda estamos trabalhando nisso. Como a plataforma Scribe Augmented Document Remediation é alimentada por aprendizado de máquina, à medida que recebermos mais documentos e apresentações de slides com gráficos complexos, poderemos treinar nosso modelo para tornar esses gráficos acessíveis. Mas, por enquanto, você terá que experimentar e ver.
 
-## Does Scribe for Meetings work with meeting platforms other than Zoom and Microsoft Teams, like Jitsi Meet, Google Meet, Slack, Amazon Chime, or BlueJeans?
+## O Scribe for Meetings funciona com outras plataformas de reunião além do Zoom e do Microsoft Teams, como Jitsi Meet, Google Meet, Slack, Amazon Chime ou BlueJeans?
 
-Not yet, but it will soon.
+Ainda não, mas em breve funcionará.
 
-## How do people within our organization log into Scribe for Meetings?
+## Como as pessoas da nossa organização fazem login no Scribe for Meetings?
 
-Scribe for Meetings currently supports two options for authentication. The simplest option is our email-based login process. Just enter your email address, and we’ll send a link that you can use to log in; no password is needed. For organizations with more stringent security requirements, we can also integrate with single sign-on (SSO) systems that implement the SAML standard, either via the [InCommon](https://www.incommon.org/) federation or using bilateral metadata exchange. Our SAML service provider uses the open-source Shibboleth SP package and was implemented in partnership with [Signet, Inc.,](https://www.signet.id/) an identity management and access control firm founded by an architect of Shibboleth. Note that we support SSO through a variety of identity providers; in addition to Shibboleth IdP, we’ve tested with Azure Active Directory. When your organization signs up with Scribe for Meetings, we’ll offer SSO onboarding, covered by the setup fee.
+Atualmente, o Scribe for Meetings oferece suporte a duas opções de autenticação. A opção mais simples é o nosso processo de login baseado em e-mail. Basta digitar seu endereço de e-mail e enviaremos um link que você poderá usar para fazer login; não é necessário usar senha. Para organizações com requisitos de segurança mais rigorosos, também podemos nos integrar a sistemas de logon único (SSO) que implementam o padrão SAML, seja por meio da federação [InCommon](https://www.incommon.org/) ou usando troca bilateral de metadados. Nosso provedor de serviços SAML usa o pacote de código aberto Shibboleth SP e foi implementado em parceria com a [Signet, Inc.,](https://www.signet.id/) uma empresa de gerenciamento de identidade e controle de acesso fundada por um arquiteto do Shibboleth. Observe que oferecemos suporte ao SSO por meio de vários provedores de identidade; além do Shibboleth IdP, testamos com o Azure Active Directory. Quando sua organização se inscrever no Scribe for Meetings, ofereceremos a integração de SSO, coberta pela taxa de instalação.
 
-## What is the future of Scribe for Meetings?
+## Qual é o futuro do Scribe for Meetings?
 
-Scribe, the platform behind our Scribe line of products, is actively learning every time a document is processed. The machine learning powered Augmented Document Remediation technology gets smarter with each page, moving us that much closer to 100% accuracy. The benefits spill over into all our products, making Scribe for Meetings an application that will only get better the more you use it.
+O Scribe, a plataforma por trás da nossa linha de produtos Scribe, está aprendendo ativamente toda vez que um documento é processado. A tecnologia de Remediação de Documentos Aumentada com aprendizado de máquina fica mais inteligente a cada página, o que nos aproxima muito mais de 100% de precisão. Os benefícios se estendem a todos os nossos produtos, tornando o Scribe for Meetings um aplicativo que só vai melhorar quanto mais você o usar.
