--- a/src/content/docs/de/faq.mdx
+++ b/src/content/docs/de/faq.mdx
@@ -1,139 +1,139 @@
 ---
-title: Frequently Asked questions
+title: Häufig gestellte Fragen
 ---
 
-Here are answers to some common questions concerning Scribe for Meetings. When faced with an issue, please refer to this document whenever possible.  
-Don’t see your question? [Contact us.](https://pneumasolutions.com/contact/), and let’s get you squared away.
+Hier finden Sie Antworten auf einige häufig gestellte Fragen zu Scribe for Meetings. Wenn Sie mit einem Problem konfrontiert werden, beziehen Sie sich bitte wann immer möglich auf dieses Dokument.  
+Sie sehen Ihre Frage nicht? [Kontaktieren Sie uns.](https://pneumasolutions.com/contact/), und wir klären alles Weitere mit Ihnen.
 
-## What is Scribe for Meetings?
+## Was ist Scribe for Meetings?
 
-Scribe for Meetings is a cloud-based technology that takes a shared presentation on platforms like Zoom, Microsoft Teams, Google Meet, and others and renders it into an accessible presentation in real time for print-impaired individuals.
+Scribe for Meetings ist eine Cloud-basierte Technologie, die eine gemeinsame Präsentation auf Plattformen wie Zoom, Microsoft Teams, Google Meet und anderen in eine barrierefreie Präsentation in Echtzeit für druckgeschädigte Personen umwandelt.
 
-## Who benefits from Scribe for Meetings?
+## Wer profitiert von Scribe for Meetings?
 
-First and most importantly, the millions of print-impaired persons who would otherwise not benefit from the information being presented; and, the masses of businesses large and small, government agencies, all levels of education,, and organizations who know little about accessibility but would like an affordable means of making their content more inclusive.
+Zunächst und vor allem die Millionen von Druckbehinderten, die sonst nicht von den präsentierten Informationen profitieren würden, sowie die Masse der großen und kleinen Unternehmen, Behörden, Bildungseinrichtungen und Organisationen, die wenig über Barrierefreiheit wissen, aber gerne ein erschwingliches Mittel hätten, um ihre Inhalte inklusiver zu gestalten.
 
-## Why should I choose Scribe for Meetings over other products?
+## Warum sollte ich Scribe for Meetings anderen Produkten vorziehen?
 
-We’re confident there is nothing else out there that does what we do quite the way we do it. Scribe for Meetings is the first technology of its kind to synchronize with meeting platforms in real time. Sure, competitors will take note and likely roll out their imitations, and we look forward to the competition ,but unless they plan on competing on price, we feel confident you will find what you need right here.
+Wir sind davon überzeugt, dass es kein anderes Produkt gibt, das das, was wir tun, auf die gleiche Weise tut wie wir. Scribe for Meetings ist die erste Technologie ihrer Art, die sich in Echtzeit mit Meeting-Plattformen synchronisiert. Sicherlich werden die Wettbewerber dies zur Kenntnis nehmen und wahrscheinlich ihre Nachahmungen auf den Markt bringen, und wir freuen uns auf den Wettbewerb, aber wenn sie nicht vorhaben, über den Preis zu konkurrieren, sind wir zuversichtlich, dass Sie hier finden, was Sie brauchen.
 
-## How does Scribe for Meetings work?
+## Wie funktioniert Scribe for Meetings?
 
-If you are the host:
-1. Visit [ScribeForMeetings.com,](https://scribeformeetings.com) paste the invite link for your meeting, and press “Go”.
-1. Click the button to register your meeting.
-1. If prompted, enter your email address to log in. If you’re using Scribe for Meetings on behalf of an organization, make sure to use your email address provided by that organization. If your organization has integrated Scribe for Meetings with a single sign-on (SSO) system, then you’ll be taken to the normal login process for your organization, or possibly logged in automatically. Otherwise, we’ll send you an email with a link that you can use to log into Scribe for Meetings.
-1. Enter a name for your meeting, select your PowerPoint slide deck, and press “Submit”.
-    NOTE: Scribe for Meetings currently supports Zoom meetings, Zoom webinars and Microsoft Teams. Sign up to our email list to receive a notification when we add features and additional meeting platforms.
+Wenn Sie der Gastgeber sind:
+1. Besuchen Sie [ScribeForMeetings.com,](https://scribeformeetings.com) fügen Sie den Einladungslink für Ihr Meeting ein und drücken Sie "Go".
+1. Klicken Sie auf die Schaltfläche, um Ihr Meeting zu registrieren.
+1. Wenn Sie dazu aufgefordert werden, geben Sie Ihre E-Mail-Adresse ein, um sich anzumelden. Wenn Sie Scribe for Meetings im Namen einer Organisation verwenden, stellen Sie sicher, dass Sie die von dieser Organisation bereitgestellte E-Mail-Adresse verwenden. Wenn Ihre Organisation Scribe for Meetings in ein Single-Sign-On (SSO)-System integriert hat, werden Sie zum normalen Anmeldeprozess für Ihre Organisation weitergeleitet oder möglicherweise automatisch eingeloggt. Andernfalls senden wir Ihnen eine E-Mail mit einem Link, über den Sie sich bei Scribe for Meetings anmelden können.
+1. Geben Sie einen Namen für Ihr Meeting ein, wählen Sie Ihr PowerPoint-Diapaket aus und klicken Sie auf "Absenden".
+    HINWEIS: Scribe for Meetings unterstützt derzeit Zoom-Meetings, Zoom-Webinare und Microsoft Teams. Tragen Sie sich in unsere E-Mail-Liste ein, um eine Benachrichtigung zu erhalten, wenn wir neue Funktionen und zusätzliche Meeting-Plattformen hinzufügen.
 
-Your content will be ready to launch within minutes. No knowledge of creating accessible presentations is required. As the host, you don’t need to run extra software on your device, and content can be uploaded as little as 5 minutes before the meeting.
-For the print-impaired meeting attendee, navigate to https://www.ScribeForMeetings.com, paste in your Zoom or Microsoft Teams invite link, and press “Go”. Alternatively, your meeting host might have given you a direct link to Scribe for Meetings, either in the invitation email or in the meeting itself via chat. Whichever way you get there, you’re now ready to follow along with the presentation in any web browser on any platform.
+Ihre Inhalte sind innerhalb weniger Minuten einsatzbereit. Es sind keine Kenntnisse in der Erstellung barrierefreier Präsentationen erforderlich. Als Gastgeber müssen Sie keine zusätzliche Software auf Ihrem Gerät ausführen, und die Inhalte können bereits 5 Minuten vor dem Meeting hochgeladen werden.
+Für druckgeschädigte Meeting-Teilnehmer navigieren Sie zu https://www.ScribeForMeetings.com, fügen den Link zu Ihrer Zoom- oder Microsoft Teams-Einladung ein und drücken auf "Los". Alternativ hat Ihnen Ihr Meeting-Gastgeber vielleicht einen direkten Link zu Scribe for Meetings gegeben, entweder in der Einladungs-E-Mail oder im Meeting selbst per Chat. Wie auch immer Sie dorthin gelangen, Sie sind nun bereit, der Präsentation in jedem Webbrowser und auf jeder Plattform zu folgen.
 
-## How difficult is it to install Scribe for Meetings?
+## Wie schwierig ist es, Scribe for Meetings zu installieren?
 
-Scribe for Meetings is not an installed application. It is a cloud service, so nothing more than a browser is needed to enjoy a meeting. For presenters, Other than uploading their content in advance of the meeting, the process was intentionally designed to be simple. There is nothing to install to your computer or device other than Zoom, Microsoft Teams or similar meeting platforms.
-Enterprise customers can host Scribe for Meetings on their own servers. Please get in touch with us for details.
+Scribe for Meetings ist keine installierte Anwendung. Es handelt sich um einen Cloud-Service, d. h. Sie benötigen lediglich einen Browser, um an einem Meeting teilzunehmen. Für Moderatoren ist der Prozess, abgesehen vom Hochladen ihrer Inhalte vor dem Meeting, bewusst einfach gehalten. Auf Ihrem Computer oder Gerät muss nichts anderes als Zoom, Microsoft Teams oder ähnliche Meeting-Plattformen installiert werden.
+Unternehmenskunden können Scribe for Meetings auf ihren eigenen Servern hosten. Bitte setzen Sie sich mit uns in Verbindung, um Details zu erfahren.
 
-## I see an attendee named “Scribe for Meetings” trying to join my meeting. What’s going on?
+## Ich sehe einen Teilnehmer mit dem Namen "Scribe for Meetings", der versucht, meinem Meeting beizutreten. Was ist hier los?
 
-That’s the Scribe bot. This bot watches the screen in your meeting, so it can see what slide is currently being displayed and provide the accessible version of that slide in real time to print-impaired attendees. The Scribe bot will not disrupt your meeting in any way, and it will not collect any information other than what content is currently being displayed through screen sharing. If your meeting has a waiting room, please promptly admit the Scribe bot into the meeting. Otherwise, Scribe for Meetings will not work.
+Das ist der Scribe-Bot. Dieser Bot beobachtet den Bildschirm in Ihrer Besprechung, so dass er sehen kann, welche Folie gerade angezeigt wird, und die barrierefreie Version dieser Folie in Echtzeit für druckgeschädigte Teilnehmer bereitstellen kann. Der Scribe-Bot unterbricht Ihre Besprechung in keiner Weise und sammelt keine anderen Informationen als die, welche Inhalte gerade über die Bildschirmfreigabe angezeigt werden. Wenn Ihr Meeting einen Warteraum hat, lassen Sie den Scribe-Bot bitte sofort in das Meeting ein. Andernfalls wird Scribe for Meetings nicht funktionieren.
 
-## I’m a print-impaired meeting attendee, and I don’t know if the meeting I’m attending has been registered through Scribe for Meetings. What can I do?
+## Ich bin ein druckgeschädigter Meeting-Teilnehmer und weiß nicht, ob das Meeting, an dem ich teilnehme, durch Scribe for Meetings registriert wurde. Was kann ich tun?
 
-Go to [ScribeForMeetings.com](https://scribeformeetings.com), paste in the Zoom or Microsoft Teams invite link for your meeting, and press “Go”. If the meeting has been registered with Scribe for Meetings, then you’re ready to follow along with accessible slides. If not, you can sign up to be notified by email when the meeting has been registered with Scribe for Meetings.
+Gehen Sie zu [ScribeForMeetings.com] (https://scribeformeetings.com), fügen Sie den Link für die Einladung zu Ihrem Meeting bei Zoom oder Microsoft Teams ein und klicken Sie auf "Los". Wenn das Meeting bei Scribe for Meetings registriert wurde, können Sie mit den zugänglichen Folien mitlesen. Wenn nicht, können Sie sich anmelden, um per E-Mail benachrichtigt zu werden, wenn das Meeting bei Scribe for Meetings registriert wurde.
 
-## I frequently attend Zoom or Microsoft Teams meetings. What’s the easiest way for me to find out if a meeting is registered with Scribe for Meetings, and if it is, view the accessible content?
+## Ich nehme häufig an Zoom- oder Microsoft Teams-Meetings teil. Wie kann ich am einfachsten herausfinden, ob ein Meeting bei Scribe for Meetings registriert ist, und wenn ja, wie ich die zugänglichen Inhalte anzeigen kann?
 
-Scribe for Meetings has an [extension for Chrome and Edge](https://chrome.google.com/webstore/detail/scribe-for-meetings/bikolphfhfiambndbiimigilhfekcfpn) that checks the availability on Scribe for Meetings of any Zoom or Microsoft Teams meeting you attend. With a single hotkey, you can view the accessible content if the meeting is registered, or request a follow-up notification if the meeting is registered with Scribe for Meetings later.
+Scribe for Meetings verfügt über eine [Erweiterung für Chrome und Edge](https://chrome.google.com/webstore/detail/scribe-for-meetings/bikolphfhfiambndbiimigilhfekcfpn), die die Verfügbarkeit eines jeden Zoom- oder Microsoft Teams-Meetings, an dem Sie teilnehmen, auf Scribe for Meetings überprüft. Mit einem einzigen Hotkey können Sie die zugänglichen Inhalte anzeigen, wenn das Meeting registriert ist, oder eine Benachrichtigung anfordern, wenn das Meeting später bei Scribe for Meetings registriert wird.
 
-## I’m a print-impaired meeting attendee. Do you have any resources to help me ask the meeting host to use Scribe for Meetings?
+## Ich bin ein druckgeschädigter Meeting-Teilnehmer. Haben Sie irgendwelche Ressourcen, die mir helfen können, den Gastgeber des Meetings zu bitten, Scribe for Meetings zu verwenden?
 
-Yes; check out our [Scribe for Meetings Self-Advocacy Kit](https://sak.scribeformeetings.com). Here you’ll find a variety of pre-written letters that you can personalize, then copy and paste into an email.
+Ja; schauen Sie sich unser [Scribe for Meetings Self-Advocacy Kit](https://sak.scribeformeetings.com) an. Hier finden Sie eine Reihe von vorformulierten Briefen, die Sie personalisieren und dann kopieren und in eine E-Mail einfügen können.
 
-## Can Scribe for Meetings convert a presentation to accessible file formats for offline viewing?
+## Kann Scribe for Meetings eine Präsentation in ein zugängliches Dateiformat konvertieren, um sie offline anzusehen?
 
-Yes. When creating the meeting, the presenter can optionally choose to provide their presentation for downloading in the following file formats:
-* An accessible web page, with all of the same features as the live presentation, including read aloud
-* Tagged PDF
-* MP3, via text-to-speech in about a dozen languages
-* DAISY, text plus audio
+Ja. Bei der Erstellung des Meetings kann der Vortragende optional wählen, ob er seine Präsentation in den folgenden Dateiformaten zum Herunterladen bereitstellen möchte:
+* Eine barrierefreie Webseite mit den gleichen Funktionen wie die Live-Präsentation, einschließlich Vorlesen
+* PDF mit Tags
+* MP3, über Text-to-Speech in etwa einem Dutzend Sprachen
+* DAISY, Text plus Audio
 * EPUB
 * Microsoft Word
-* Braille: Grade 1, Grade 2, Unified English Braille, and many other languages
+* Braille-Schrift: Grad 1, Grad 2, Unified English Braille und viele andere Sprachen
 
-The PDF and Microsoft Word options support large print. This option, and other options such as speaking rate for audio output, can be chosen by attendees when they download the slides.
-This feature is not enabled by default; the presenter must choose to allow it. To enable this feature when registering a meeting, check the checkbox called “Allow attendees to download accessible versions of slides.” This choice will only take effect for the meeting currently being registered.
-For a meeting where this feature is enabled, as soon as the presenter has shown a slide, the web page where attendees view accessible slides will include a link called “Download Slides”. To download the slides, an attendee should follow these steps:
-1. Click the “Download Slides” link.
-1. If prompted, enter your email address and follow the instructions to log in.
-1. Choose the accessible format you want.
-1. For some formats, you can optionally customize settings, such as text-to-speech voice, speaking rate, braille translation table, or large print.
-1. Click the “Prepare Download” button.
-1. Watch your email for the download link. For most formats, the email will arrive within a few minutes. Conversion to audio can take much longer, depending on the length of the slide deck, because speech synthesis is a more time-consuming process than other conversions.
+Die Optionen PDF und Microsoft Word unterstützen Großdruck. Diese Option und andere Optionen, wie z. B. die Sprechgeschwindigkeit für die Audioausgabe, können von den Teilnehmern ausgewählt werden, wenn sie die Folien herunterladen.
+Diese Funktion ist nicht standardmäßig aktiviert; der Vortragende muss sie zulassen. Um diese Funktion bei der Registrierung eines Meetings zu aktivieren, markieren Sie das Kontrollkästchen "Teilnehmern das Herunterladen barrierefreier Versionen von Folien erlauben" Diese Auswahl wird nur für die aktuell registrierte Besprechung wirksam.
+Bei einem Meeting, bei dem diese Funktion aktiviert ist, enthält die Webseite, auf der die Teilnehmer die zugänglichen Folien ansehen können, einen Link mit der Bezeichnung "Folien herunterladen", sobald der Vortragende eine Folie gezeigt hat. Um die Folien herunterzuladen, muss der Teilnehmer die folgenden Schritte ausführen:
+1. Klicken Sie auf den Link "Folien herunterladen".
+1. Wenn Sie dazu aufgefordert werden, geben Sie Ihre E-Mail-Adresse ein und folgen Sie den Anweisungen, um sich anzumelden.
+1. Wählen Sie das gewünschte zugängliche Format.
+1. Für einige Formate können Sie optional Einstellungen anpassen, z. B. Text-to-Speech-Stimme, Sprechgeschwindigkeit, Braille-Übersetzungstabelle oder Großdruck.
+1. Klicken Sie auf die Schaltfläche "Download vorbereiten".
+1. Warten Sie in Ihrer E-Mail auf den Download-Link. Bei den meisten Formaten wird die E-Mail innerhalb weniger Minuten eintreffen. Die Umwandlung in ein Audioformat kann je nach Länge des Foliendokuments wesentlich länger dauern, da die Sprachsynthese ein zeitaufwändigerer Prozess ist als andere Umwandlungen.
 
-## I host many meetings, and I want to allow my attendees to download the slides for all of these meetings. Can I turn this feature on by default?
+## Ich veranstalte viele Meetings und möchte meinen Teilnehmern die Möglichkeit geben, die Folien für all diese Meetings herunterzuladen. Kann ich diese Funktion standardmäßig einschalten?
 
-Yes. Follow these steps:
+Ja. Gehen Sie wie folgt vor:
 1. 
-Go to ScribeForMeetings.com.
-1. If there’s a “Log In” link at the top of the page, click it, enter your email address, and follow the instructions to log into Scribe for Meetings.
-1. Click “Settings”, then “Meeting Defaults”.
-1. Check the checkbox called “Allow attendees to download accessible versions of slides”, then click “Save”.
+Gehen Sie zu ScribeForMeetings.com.
+1. Wenn es oben auf der Seite einen Link "Anmelden" gibt, klicken Sie darauf, geben Sie Ihre E-Mail-Adresse ein und folgen Sie den Anweisungen, um sich bei Scribe for Meetings anzumelden.
+1. Klicken Sie auf "Einstellungen" und dann auf "Meeting Defaults".
+1. Aktivieren Sie das Kontrollkästchen "Teilnehmer dürfen zugängliche Versionen der Folien herunterladen" und klicken Sie dann auf "Speichern".
 
-## I want to protect my slides from unauthorized copying and distribution. Does Scribe for Meetings support this?
+## Ich möchte meine Folien vor unbefugtem Kopieren und Verteilen schützen. Unterstützt Scribe for Meetings dies?
 
-Unfortunately, Scribe for Meetings cannot stop your attendees from copying the text of your slides. However, if you don’t allow the slides to be downloaded, it won’t be easy for attendees to copy your slides, because they will have to copy one slide at a time. Also, note that in practice, this is no different from what any attendee can already do by taking screenshots of your slides.
+Leider kann Scribe for Meetings nicht verhindern, dass Ihre Teilnehmer den Text Ihrer Folien kopieren. Wenn Sie jedoch nicht zulassen, dass die Folien heruntergeladen werden können, wird es für die Teilnehmer nicht einfach sein, Ihre Folien zu kopieren, da sie jeweils eine einzelne Folie kopieren müssen. Beachten Sie auch, dass sich dies in der Praxis nicht von dem unterscheidet, was jeder Teilnehmer bereits tun kann, indem er Screenshots Ihrer Folien anfertigt.
 
-## Is Scribe for Meetings multilingual?
+## Ist Scribe for Meetings mehrsprachig?
 
-Yes. Scribe for Meetings can render content in any of 140 languages, again with no extra effort from the presenter.
+Ja, Scribe for Meetings kann Inhalte in 140 Sprachen wiedergeben, ohne dass der Vortragende einen zusätzlichen Aufwand betreiben muss.
 
-## Do I need to slow down my presentation to make sure that print-impaired attendees can keep up?
+## Muss ich meine Präsentation verlangsamen, um sicherzustellen, dass die Teilnehmer mit Lese- und Schreibschwäche mithalten können?
 
-No. Scribe for Meetings has a feature called Dynamic Visual Representation, or DVR mode for short, that allows print-impaired attendees to read your accessible slides at their own pace. An attendee can pause the live presentation, go back to a slide they’ve already read, move forward at their own pace, and then continue with the live presentation when they’re ready.
-To use DVR mode, the attendee should press either the Suspend Presentation button or the Previous Slide button. These buttons are labeled as such for screen reader users, and for mouse users who hover over them. Visually, they’re at the bottom of the page and look like the Pause and Previous Track buttons in a media player. When the user presses one of these buttons, the live presentation will pause, and for the Previous Slide button, it will return to the previous slide. The user can then use the Previous Slide and Next Slide buttons to go through the slides at their own pace, and the Go Live button to return to the live presentation. These buttons look like the Previous Track, Next Track, and Play buttons in a media player.  
-Note that DVR mode only allows attendees to review slides that have been shown since they joined the presentation. If a print-impaired attendee is late for your presentation, then they missed the same slides that any other late attendee would have missed.
+Nein. Scribe for Meetings verfügt über eine Funktion namens Dynamic Visual Representation, kurz DVR-Modus, mit der Teilnehmer mit Sehbehinderungen Ihre barrierefreien Folien in ihrem eigenen Tempo lesen können. Ein Teilnehmer kann die Live-Präsentation unterbrechen, zu einer bereits gelesenen Folie zurückkehren, in seinem eigenen Tempo vorwärts gehen und dann mit der Live-Präsentation fortfahren, wenn er bereit ist.
+Um den DVR-Modus zu verwenden, muss der Teilnehmer entweder auf die Schaltfläche "Präsentation unterbrechen" oder auf die Schaltfläche "Vorherige Folie" klicken. Diese Schaltflächen sind für Benutzer von Bildschirmlesegeräten und für Mausbenutzer, die mit dem Mauszeiger über sie fahren, entsprechend gekennzeichnet. Sie befinden sich am unteren Rand der Seite und sehen aus wie die Schaltflächen "Pause" und "Vorheriger Titel" in einem Media-Player. Wenn der Benutzer eine dieser Schaltflächen drückt, wird die Live-Präsentation angehalten, und bei der Schaltfläche "Vorherige Folie" wird zur vorherigen Folie zurückgekehrt. Mit den Schaltflächen Vorheriges Dia und Nächstes Dia kann der Benutzer dann in seinem eigenen Tempo durch die Folien gehen, und mit der Schaltfläche Live gehen kann er zur Live-Präsentation zurückkehren. Diese Schaltflächen sehen aus wie die Schaltflächen Vorheriges Stück, Nächstes Stück und Abspielen in einem Media Player.  
+Beachten Sie, dass die Teilnehmer im DVR-Modus nur die Folien ansehen können, die gezeigt wurden, seit sie der Präsentation beigetreten sind. Wenn ein Teilnehmer mit einer Sehbehinderung zu spät zu Ihrer Präsentation kommt, hat er dieselben Folien verpasst wie jeder andere Teilnehmer, der zu spät kommt.
 
-## I have a print-impaired attendee who would benefit from having my content spoken aloud but isn’t comfortable with a full screen reader. Can Scribe for Meetings help?
+## Ich habe einen Teilnehmer mit einer Sehbehinderung, der davon profitieren würde, dass meine Inhalte vorgelesen werden, der aber nicht mit einem Bildschirmlesegerät umgehen kann. Kann Scribe for Meetings dabei helfen?
 
-Yes. Our Read Aloud feature will speak your slides using the voices provided by your user’s device and web browser, while drawing a box around each word as it is spoken to help the user follow along visually. For Windows users, we highly recommend the Microsoft Edge browser for this feature, because Edge offers outstanding voices in several languages, free of charge. However, this feature also works with all other major platforms and browsers, including mobile devices.  
-To start reading the current slide aloud, press the Read Aloud button, which is at the bottom of the screen and looks like a speaker. While Scribe for Meetings is reading the slide aloud, it will show controls to stop reading (the button with a square icon), pause or resume, go back or forward (the buttons that look like Previous Track and Next Track buttons in a media player), speed up and slow down reading, or change the voice. These controls will go away as soon as reading is finished or as soon as the user stops it.  
-Note that Read Aloud and DVR mode (see above) can be used together, to allow print-impaired attendees to read slides both in their own way and at their own pace.
+Ja. Unsere Vorlesefunktion spricht Ihre Folien mit den Stimmen des Geräts und des Webbrowsers des Teilnehmers und zeichnet dabei einen Rahmen um jedes gesprochene Wort, damit der Teilnehmer dem Text visuell folgen kann. Für Windows-Benutzer empfehlen wir den Microsoft Edge-Browser für diese Funktion, da Edge kostenlos hervorragende Stimmen in mehreren Sprachen bietet. Diese Funktion funktioniert jedoch auch mit allen anderen wichtigen Plattformen und Browsern, einschließlich mobiler Geräte.  
+Um das Vorlesen der aktuellen Folie zu starten, drücken Sie auf die Schaltfläche Vorlesen, die sich am unteren Rand des Bildschirms befindet und wie ein Lautsprecher aussieht. Während Scribe for Meetings die Folie vorliest, werden Steuerelemente zum Anhalten des Vorlesens (die Schaltfläche mit dem quadratischen Symbol), zum Anhalten oder Fortsetzen, zum Zurück- oder Vorspulen (die Schaltflächen, die wie die Schaltflächen "Vorheriger Titel" und "Nächster Titel" in einem Media-Player aussehen), zum Beschleunigen und Verlangsamen des Vorlesens oder zum Ändern der Stimme angezeigt. Diese Steuerelemente werden ausgeblendet, sobald die Lektüre beendet ist oder der Benutzer sie anhält.  
+Beachten Sie, dass der Vorlese- und der DVR-Modus (siehe oben) zusammen verwendet werden können, damit Teilnehmer mit einer Lesebehinderung die Folien auf ihre eigene Weise und in ihrem eigenen Tempo lesen können.
 
-## I have a print-impaired attendee who needs my slides in a large font but doesn’t need a full-screen magnification program. Can Scribe for Meetings help?
+## Ich habe einen sehbehinderten Teilnehmer, der meine Folien in einer großen Schrift benötigt, aber kein Vollbildvergrößerungsprogramm benötigt. Kann Scribe for Meetings dabei helfen?
 
-Yes. Scribe for Meetings displays your slides in a way that makes them accessible for attendees with all types of content requirements. If large fonts are needed, an attendee can use their browser’s page zoom feature to adjust the font size of the slides, without requiring the user to continually scroll back and forth. Scribe for Meetings will also automatically display the text in the user’s preferred color scheme, whether it’s the usual dark-on-light, light-on-dark (also known as dark mode), or a custom scheme.  
+Ja. Scribe for Meetings zeigt Ihre Folien so an, dass sie für Teilnehmer mit allen Arten von Inhaltsanforderungen zugänglich sind. Wenn große Schriftarten benötigt werden, kann ein Teilnehmer die Seitenvergrößerungsfunktion seines Browsers nutzen, um die Schriftgröße der Folien anzupassen, ohne dass der Benutzer ständig hin- und herblättern muss. Scribe for Meetings zeigt den Text auch automatisch in dem vom Benutzer bevorzugten Farbschema an, sei es das übliche Dunkel-auf-Hell, Hell-auf-Dunkel (auch bekannt als Dunkelmodus) oder ein benutzerdefiniertes Schema.  
 
-## Wait! What’s going on here? Why do my slides look so different in Scribe for Meetings than they do in my presentation?
+## Moment mal, was ist hier los? Warum sehen meine Folien in Scribe for Meetings so anders aus als in meiner Präsentation?
 
-Every aspect of how Scribe for Meetings displays your slides is optimized for accessibility, for attendees with all types of print impairments. Since Scribe for Meetings is meant to be used alongside your existing meeting platform, attendees are always free to flip back to the main meeting window to see the slides as they’re displayed in your presentation without accessibility.
+Jeder Aspekt der Darstellung Ihrer Folien in Scribe for Meetings ist für die Barrierefreiheit optimiert, für Teilnehmer mit allen Arten von Druckbehinderungen. Da Scribe for Meetings als Ergänzung zu Ihrer bestehenden Meeting-Plattform gedacht ist, können die Teilnehmer jederzeit zum Hauptfenster des Meetings zurückblättern, um die Folien so zu sehen, wie sie in Ihrer Präsentation ohne Barrierefreiheit angezeigt werden.
 
-## I don’t use PowerPoint. Can I still make my presentation accessible with Scribe for Meetings?
+## Ich verwende kein PowerPoint. Kann ich meine Präsentation trotzdem mit Scribe for Meetings zugänglich machen?
 
-Scribe for Meetings can make your screen-shared slides accessible no matter what app you use to present them, as long as you can provide your slide deck in PowerPoint format. Other presentation apps such as Keynote and Google Slides can convert their slide decks to PowerPoint format, so you can use these with Scribe for Meetings.
+Scribe for Meetings kann Ihre gemeinsam genutzten Folien zugänglich machen, unabhängig davon, welche Anwendung Sie für die Präsentation verwenden, solange Sie Ihr Foliendokument im PowerPoint-Format bereitstellen können. Andere Präsentationsanwendungen wie Keynote und Google Slides können ihre Foliendateien in das PowerPoint-Format konvertieren, so dass Sie diese mit Scribe for Meetings verwenden können.
 
-## Scribe for Meetings isn’t showing the accessible versions of my slides during the presentation, or it’s skipping some slides. What’s wrong?
+## Scribe for Meetings zeigt während der Präsentation nicht die zugänglichen Versionen meiner Folien an, oder es überspringt einige Folien. Was ist das Problem?
 
-Make sure that you’re presenting your slides in a full-screen slide show, and that you’ve set up Zoom or Microsoft Teams screen sharing to share that slide show with your audience. If you’re using PowerPoint for Windows to run your presentation, then once you’ve opened PowerPoint, make sure you press F5 to enter slide show mode.
-[Learn more about how to use Zoom screen sharing with PowerPoint.](https://support.zoom.us/hc/en-us/articles/203395347-Screen-Sharing-a-PowerPoint-Presentation)
-[Learn how to use Microsoft Teams screen sharing with PowerPoint.](https://support.microsoft.com/en-us/office/share-powerpoint-slides-in-a-teams-meeting-fc5a5394-2159-419c-bc59-1f64c1f4e470)
+Vergewissern Sie sich, dass Sie Ihre Folien in einer bildschirmfüllenden Diashow präsentieren und dass Sie die Bildschirmfreigabe von Zoom oder Microsoft Teams eingerichtet haben, um diese Diashow mit Ihrem Publikum zu teilen. Wenn Sie PowerPoint für Windows verwenden, um Ihre Präsentation auszuführen, drücken Sie nach dem Öffnen von PowerPoint die Taste F5, um den Diashow-Modus zu aktivieren.
+[Erfahren Sie mehr über die Verwendung der Zoom-Bildschirmfreigabe mit PowerPoint](https://support.zoom.us/hc/en-us/articles/203395347-Screen-Sharing-a-PowerPoint-Presentation)
+[Erfahren Sie, wie Sie die Bildschirmfreigabe von Microsoft Teams mit PowerPoint nutzen können] (https://support.microsoft.com/en-us/office/share-powerpoint-slides-in-a-teams-meeting-fc5a5394-2159-419c-bc59-1f64c1f4e470)
 
-## How does Scribe for Meetings handle pictures and graphics in my slides?
+## Wie behandelt Scribe for Meetings Bilder und Grafiken in meinen Folien?
 
-If you already wrote descriptions (also known as alt tags or captions) for the graphical content in your slides, Scribe for Meetings will use those. Otherwise, Scribe for Meetings will use a cloud-based image description service powered by machine learning to automatically add alt tags for your graphics. If those pictures contain text, Scribe for Meetings will also use optical character recognition (OCR) to make that text accessible.
+Wenn Sie bereits Beschreibungen (auch bekannt als Alt-Tags oder Bildunterschriften) für die grafischen Inhalte in Ihren Folien geschrieben haben, wird Scribe for Meetings diese verwenden. Andernfalls nutzt Scribe for Meetings einen Cloud-basierten Bildbeschreibungsdienst, der auf maschinellem Lernen basiert, um automatisch Alt-Tags für Ihre Grafiken hinzuzufügen. Wenn diese Bilder Text enthalten, verwendet Scribe for Meetings auch optische Zeichenerkennung (OCR), um diesen Text zugänglich zu machen.
 
-## My slides have charts, diagrams, or other complex graphics. Can Scribe for Meetings handle them?
+## Meine Folien enthalten Tabellen, Diagramme oder andere komplexe Grafiken. Kann Scribe for Meetings diese verarbeiten?
 
-The short answer is, not for the most part. We’re still working on this. Because the Scribe Augmented Document Remediation platform is powered by machine learning, as we receive more documents and slide decks with complex graphics, we’ll be able to train our model to make those graphics accessible. But, for now, you’ll just have to try it and see.
+Die kurze Antwort lautet: In den meisten Fällen nicht. Daran arbeiten wir noch. Da die Scribe Augmented Document Remediation Plattform auf maschinellem Lernen basiert, werden wir, sobald wir mehr Dokumente und Foliendokumente mit komplexen Grafiken erhalten, in der Lage sein, unser Modell zu trainieren, um diese Grafiken zugänglich zu machen. Aber im Moment müssen Sie es einfach ausprobieren und sehen.
 
-## Does Scribe for Meetings work with meeting platforms other than Zoom and Microsoft Teams, like Jitsi Meet, Google Meet, Slack, Amazon Chime, or BlueJeans?
+## Funktioniert Scribe for Meetings auch mit anderen Meeting-Plattformen als Zoom und Microsoft Teams, wie Jitsi Meet, Google Meet, Slack, Amazon Chime oder BlueJeans?
 
-Not yet, but it will soon.
+Noch nicht, aber das wird bald der Fall sein.
 
-## How do people within our organization log into Scribe for Meetings?
+## Wie melden sich Personen innerhalb unserer Organisation bei Scribe for Meetings an?
 
-Scribe for Meetings currently supports two options for authentication. The simplest option is our email-based login process. Just enter your email address, and we’ll send a link that you can use to log in; no password is needed. For organizations with more stringent security requirements, we can also integrate with single sign-on (SSO) systems that implement the SAML standard, either via the [InCommon](https://www.incommon.org/) federation or using bilateral metadata exchange. Our SAML service provider uses the open-source Shibboleth SP package and was implemented in partnership with [Signet, Inc.,](https://www.signet.id/) an identity management and access control firm founded by an architect of Shibboleth. Note that we support SSO through a variety of identity providers; in addition to Shibboleth IdP, we’ve tested with Azure Active Directory. When your organization signs up with Scribe for Meetings, we’ll offer SSO onboarding, covered by the setup fee.
+Scribe for Meetings unterstützt derzeit zwei Optionen für die Authentifizierung. Die einfachste Option ist unser E-Mail-basierter Anmeldeprozess. Geben Sie einfach Ihre E-Mail-Adresse ein, und wir senden Ihnen einen Link, mit dem Sie sich anmelden können; ein Passwort ist nicht erforderlich. Für Organisationen mit strengeren Sicherheitsanforderungen können wir auch Single Sign-On (SSO)-Systeme integrieren, die den SAML-Standard implementieren, entweder über den [InCommon](https://www.incommon.org/)-Verbund oder durch bilateralen Metadatenaustausch. Unser SAML-Dienstanbieter verwendet das Open-Source-Paket Shibboleth SP und wurde in Zusammenarbeit mit [Signet, Inc.](https://www.signet.id/) implementiert, einem Unternehmen für Identitätsmanagement und Zugriffskontrolle, das von einem Architekten von Shibboleth gegründet wurde. Beachten Sie, dass wir SSO durch eine Vielzahl von Identitätsanbietern unterstützen; zusätzlich zu Shibboleth IdP haben wir mit Azure Active Directory getestet. Wenn sich Ihre Organisation bei Scribe for Meetings anmeldet, bieten wir SSO-Onboarding an, das durch die Einrichtungsgebühr abgedeckt ist.
 
-## What is the future of Scribe for Meetings?
+## Wie sieht die Zukunft von Scribe for Meetings aus?
 
-Scribe, the platform behind our Scribe line of products, is actively learning every time a document is processed. The machine learning powered Augmented Document Remediation technology gets smarter with each page, moving us that much closer to 100% accuracy. The benefits spill over into all our products, making Scribe for Meetings an application that will only get better the more you use it.
+Scribe, die Plattform hinter unserer Scribe-Produktlinie, lernt aktiv bei jeder Verarbeitung eines Dokuments. Die auf maschinellem Lernen basierende Augmented Document Remediation-Technologie wird mit jeder Seite intelligenter und bringt uns der 100-prozentigen Genauigkeit ein großes Stück näher. Diese Vorteile wirken sich auf alle unsere Produkte aus und machen Scribe for Meetings zu einer Anwendung, die immer besser wird, je öfter Sie sie verwenden.
