--- a/src/content/docs/it/faq.mdx
+++ b/src/content/docs/it/faq.mdx
@@ -1,139 +1,139 @@
 ---
-title: Frequently Asked questions
+title: Domande frequenti
 ---
 
-Here are answers to some common questions concerning Scribe for Meetings. When faced with an issue, please refer to this document whenever possible.  
-Don’t see your question? [Contact us.](https://pneumasolutions.com/contact/), and let’s get you squared away.
+Ecco le risposte ad alcune domande comuni su Scribe for Meetings. Quando vi trovate di fronte a un problema, fate riferimento a questo documento ogni volta che è possibile.  
+Non trovate la vostra domanda? [Contattateci] (https://pneumasolutions.com/contact/) e vediamo di risolvere il problema.
 
-## What is Scribe for Meetings?
+## Cos'è Scribe for Meetings?
 
-Scribe for Meetings is a cloud-based technology that takes a shared presentation on platforms like Zoom, Microsoft Teams, Google Meet, and others and renders it into an accessible presentation in real time for print-impaired individuals.
+Scribe for Meetings è una tecnologia basata sul cloud che prende una presentazione condivisa su piattaforme come Zoom, Microsoft Teams, Google Meet e altre e la trasforma in una presentazione accessibile in tempo reale per le persone con disabilità di stampa.
 
-## Who benefits from Scribe for Meetings?
+## Chi beneficia di Scribe for Meetings?
 
-First and most importantly, the millions of print-impaired persons who would otherwise not benefit from the information being presented; and, the masses of businesses large and small, government agencies, all levels of education,, and organizations who know little about accessibility but would like an affordable means of making their content more inclusive.
+In primo luogo, e soprattutto, i milioni di persone con disabilità di stampa che altrimenti non trarrebbero beneficio dalle informazioni presentate; inoltre, le masse di aziende grandi e piccole, agenzie governative, istituti scolastici di ogni livello e organizzazioni che sanno poco di accessibilità ma vorrebbero un mezzo economico per rendere i loro contenuti più inclusivi.
 
-## Why should I choose Scribe for Meetings over other products?
+## Perché scegliere Scribe for Meetings rispetto ad altri prodotti?
 
-We’re confident there is nothing else out there that does what we do quite the way we do it. Scribe for Meetings is the first technology of its kind to synchronize with meeting platforms in real time. Sure, competitors will take note and likely roll out their imitations, and we look forward to the competition ,but unless they plan on competing on price, we feel confident you will find what you need right here.
+Siamo convinti che non ci sia nient'altro in circolazione che faccia quello che facciamo noi nel modo in cui lo facciamo noi. Scribe for Meetings è la prima tecnologia del suo genere a sincronizzarsi con le piattaforme di riunione in tempo reale. Certo, i concorrenti ne prenderanno atto e probabilmente lanceranno le loro imitazioni, e noi non vediamo l'ora di vederle, ma a meno che non intendano competere sul prezzo, siamo certi che troverete quello che vi serve proprio qui.
 
-## How does Scribe for Meetings work?
+## Come funziona Scribe for Meetings?
 
-If you are the host:
-1. Visit [ScribeForMeetings.com,](https://scribeformeetings.com) paste the invite link for your meeting, and press “Go”.
-1. Click the button to register your meeting.
-1. If prompted, enter your email address to log in. If you’re using Scribe for Meetings on behalf of an organization, make sure to use your email address provided by that organization. If your organization has integrated Scribe for Meetings with a single sign-on (SSO) system, then you’ll be taken to the normal login process for your organization, or possibly logged in automatically. Otherwise, we’ll send you an email with a link that you can use to log into Scribe for Meetings.
-1. Enter a name for your meeting, select your PowerPoint slide deck, and press “Submit”.
-    NOTE: Scribe for Meetings currently supports Zoom meetings, Zoom webinars and Microsoft Teams. Sign up to our email list to receive a notification when we add features and additional meeting platforms.
+Se siete l'ospite:
+1. Visitare [ScribeForMeetings.com,](https://scribeformeetings.com) incollare il link dell'invito alla riunione e premere "Vai".
+1. Fare clic sul pulsante per registrare la riunione.
+1. Se richiesto, inserire il proprio indirizzo e-mail per accedere. Se si utilizza Scribe for Meetings per conto di un'organizzazione, assicurarsi di utilizzare l'indirizzo e-mail fornito dall'organizzazione stessa. Se l'organizzazione ha integrato Scribe for Meetings con un sistema SSO (Single Sign-On), si accederà al normale processo di login dell'organizzazione, o eventualmente si accederà automaticamente. In caso contrario, vi invieremo un'e-mail con un link da utilizzare per accedere a Scribe for Meetings.
+1. Immettere un nome per la riunione, selezionare la presentazione in PowerPoint e premere "Invia".
+    NOTA: Scribe for Meetings supporta attualmente le riunioni Zoom, i webinar Zoom e Microsoft Teams. Iscrivetevi al nostro elenco di e-mail per ricevere una notifica quando aggiungiamo funzionalità e altre piattaforme di riunione.
 
-Your content will be ready to launch within minutes. No knowledge of creating accessible presentations is required. As the host, you don’t need to run extra software on your device, and content can be uploaded as little as 5 minutes before the meeting.
-For the print-impaired meeting attendee, navigate to https://www.ScribeForMeetings.com, paste in your Zoom or Microsoft Teams invite link, and press “Go”. Alternatively, your meeting host might have given you a direct link to Scribe for Meetings, either in the invitation email or in the meeting itself via chat. Whichever way you get there, you’re now ready to follow along with the presentation in any web browser on any platform.
+Il vostro contenuto sarà pronto per essere lanciato in pochi minuti. Non è richiesta alcuna conoscenza della creazione di presentazioni accessibili. L'organizzatore non ha bisogno di eseguire software aggiuntivi sul proprio dispositivo e i contenuti possono essere caricati anche solo 5 minuti prima della riunione.
+Per i partecipanti alle riunioni con disabilità di stampa, navigare su https://www.ScribeForMeetings.com, incollare il link di invito a Zoom o Microsoft Teams e premere "Vai". In alternativa, l'organizzatore della riunione potrebbe aver fornito un link diretto a Scribe for Meetings, nell'e-mail di invito o durante la riunione stessa via chat. Qualunque sia il modo in cui ci si arriva, ora si è pronti a seguire la presentazione in qualsiasi browser web e su qualsiasi piattaforma.
 
-## How difficult is it to install Scribe for Meetings?
+## Quanto è difficile installare Scribe for Meetings?
 
-Scribe for Meetings is not an installed application. It is a cloud service, so nothing more than a browser is needed to enjoy a meeting. For presenters, Other than uploading their content in advance of the meeting, the process was intentionally designed to be simple. There is nothing to install to your computer or device other than Zoom, Microsoft Teams or similar meeting platforms.
-Enterprise customers can host Scribe for Meetings on their own servers. Please get in touch with us for details.
+Scribe for Meetings non è un'applicazione installata. È un servizio cloud, quindi non è necessario altro che un browser per partecipare a una riunione. Per i presentatori, a parte il caricamento dei contenuti prima della riunione, il processo è stato intenzionalmente progettato per essere semplice. Non c'è nulla da installare sul computer o sul dispositivo, a parte Zoom, Microsoft Teams o piattaforme di riunione simili.
+I clienti aziendali possono ospitare Scribe for Meetings sui propri server. Contattateci per i dettagli.
 
-## I see an attendee named “Scribe for Meetings” trying to join my meeting. What’s going on?
+## Vedo un partecipante chiamato "Scribe for Meetings" che cerca di unirsi alla mia riunione. Cosa succede?
 
-That’s the Scribe bot. This bot watches the screen in your meeting, so it can see what slide is currently being displayed and provide the accessible version of that slide in real time to print-impaired attendees. The Scribe bot will not disrupt your meeting in any way, and it will not collect any information other than what content is currently being displayed through screen sharing. If your meeting has a waiting room, please promptly admit the Scribe bot into the meeting. Otherwise, Scribe for Meetings will not work.
+Si tratta del bot Scribe. Questo bot osserva lo schermo della riunione, in modo da vedere quale diapositiva è attualmente visualizzata e fornire la versione accessibile di quella diapositiva in tempo reale ai partecipanti con disabilità di stampa. Il bot Scribe non interromperà in alcun modo la riunione e non raccoglierà altre informazioni se non quelle relative ai contenuti attualmente visualizzati attraverso la condivisione dello schermo. Se la riunione prevede una sala d'attesa, si prega di ammettere prontamente il bot Scribe alla riunione. In caso contrario, Scribe for Meetings non funzionerà.
 
-## I’m a print-impaired meeting attendee, and I don’t know if the meeting I’m attending has been registered through Scribe for Meetings. What can I do?
+## Sono un partecipante a una riunione con disabilità di stampa e non so se la riunione a cui sto partecipando è stata registrata tramite Scribe for Meetings. Cosa posso fare?
 
-Go to [ScribeForMeetings.com](https://scribeformeetings.com), paste in the Zoom or Microsoft Teams invite link for your meeting, and press “Go”. If the meeting has been registered with Scribe for Meetings, then you’re ready to follow along with accessible slides. If not, you can sign up to be notified by email when the meeting has been registered with Scribe for Meetings.
+Andare su [ScribeForMeetings.com](https://scribeformeetings.com), incollare il link di invito a Zoom o Microsoft Teams per la riunione e premere "Vai". Se la riunione è stata registrata con Scribe for Meetings, si è pronti a seguire le diapositive accessibili. In caso contrario, è possibile registrarsi per ricevere una notifica via e-mail quando la riunione è stata registrata con Scribe for Meetings.
 
-## I frequently attend Zoom or Microsoft Teams meetings. What’s the easiest way for me to find out if a meeting is registered with Scribe for Meetings, and if it is, view the accessible content?
+## Partecipo spesso a riunioni Zoom o Microsoft Teams. Qual è il modo più semplice per scoprire se una riunione è registrata con Scribe for Meetings e, in caso affermativo, visualizzare i contenuti accessibili?
 
-Scribe for Meetings has an [extension for Chrome and Edge](https://chrome.google.com/webstore/detail/scribe-for-meetings/bikolphfhfiambndbiimigilhfekcfpn) that checks the availability on Scribe for Meetings of any Zoom or Microsoft Teams meeting you attend. With a single hotkey, you can view the accessible content if the meeting is registered, or request a follow-up notification if the meeting is registered with Scribe for Meetings later.
+Scribe for Meetings dispone di un'[estensione per Chrome ed Edge](https://chrome.google.com/webstore/detail/scribe-for-meetings/bikolphfhfiambndbiimigilhfekcfpn) che controlla la disponibilità su Scribe for Meetings di qualsiasi riunione Zoom o Microsoft Teams a cui si partecipa. Con un solo tasto di scelta rapida, è possibile visualizzare il contenuto accessibile se la riunione è registrata o richiedere una notifica di follow-up se la riunione viene registrata in Scribe for Meetings in un secondo momento.
 
-## I’m a print-impaired meeting attendee. Do you have any resources to help me ask the meeting host to use Scribe for Meetings?
+## Sono un partecipante a una riunione con disabilità di stampa. Avete qualche risorsa per aiutarmi a chiedere all'organizzatore della riunione di utilizzare Scribe per riunioni?
 
-Yes; check out our [Scribe for Meetings Self-Advocacy Kit](https://sak.scribeformeetings.com). Here you’ll find a variety of pre-written letters that you can personalize, then copy and paste into an email.
+Sì, consultate il nostro [Kit di autopromozione di Scribe for Meetings](https://sak.scribeformeetings.com). Qui troverete una serie di lettere pre-scritte che potrete personalizzare e poi copiare e incollare in un'e-mail.
 
-## Can Scribe for Meetings convert a presentation to accessible file formats for offline viewing?
+## Scribe for Meetings può convertire una presentazione in formati di file accessibili per la visualizzazione offline?
 
-Yes. When creating the meeting, the presenter can optionally choose to provide their presentation for downloading in the following file formats:
-* An accessible web page, with all of the same features as the live presentation, including read aloud
-* Tagged PDF
-* MP3, via text-to-speech in about a dozen languages
-* DAISY, text plus audio
+Si. Durante la creazione della riunione, il relatore può scegliere di fornire la propria presentazione per il download nei seguenti formati di file:
+* Una pagina web accessibile, con tutte le stesse caratteristiche della presentazione dal vivo, compresa la lettura ad alta voce
+* PDF con etichetta
+* MP3, con sintesi vocale in circa una dozzina di lingue
+* DAISY, testo e audio
 * EPUB
 * Microsoft Word
-* Braille: Grade 1, Grade 2, Unified English Braille, and many other languages
+* Braille: Grado 1, Grado 2, Braille inglese unificato e molte altre lingue
 
-The PDF and Microsoft Word options support large print. This option, and other options such as speaking rate for audio output, can be chosen by attendees when they download the slides.
-This feature is not enabled by default; the presenter must choose to allow it. To enable this feature when registering a meeting, check the checkbox called “Allow attendees to download accessible versions of slides.” This choice will only take effect for the meeting currently being registered.
-For a meeting where this feature is enabled, as soon as the presenter has shown a slide, the web page where attendees view accessible slides will include a link called “Download Slides”. To download the slides, an attendee should follow these steps:
-1. Click the “Download Slides” link.
-1. If prompted, enter your email address and follow the instructions to log in.
-1. Choose the accessible format you want.
-1. For some formats, you can optionally customize settings, such as text-to-speech voice, speaking rate, braille translation table, or large print.
-1. Click the “Prepare Download” button.
-1. Watch your email for the download link. For most formats, the email will arrive within a few minutes. Conversion to audio can take much longer, depending on the length of the slide deck, because speech synthesis is a more time-consuming process than other conversions.
+Le opzioni PDF e Microsoft Word supportano la stampa a caratteri grandi. Questa e altre opzioni, come la velocità di riproduzione dell'audio, possono essere scelte dai partecipanti quando scaricano le diapositive.
+Questa funzione non è abilitata per impostazione predefinita; il presentatore deve scegliere di consentirla. Per attivare questa funzione durante la registrazione di una riunione, selezionare la casella di controllo "Consenti ai partecipanti di scaricare versioni accessibili delle diapositive" Questa scelta avrà effetto solo per la riunione in corso di registrazione.
+Per una riunione in cui questa funzione è abilitata, non appena il relatore mostra una diapositiva, la pagina web in cui i partecipanti visualizzano le diapositive accessibili includerà un link chiamato "Scarica diapositive". Per scaricare le diapositive, i partecipanti devono seguire i seguenti passaggi:
+1. Fare clic sul link "Scarica diapositive".
+1. Se richiesto, inserire il proprio indirizzo e-mail e seguire le istruzioni per accedere.
+1. Scegliere il formato accessibile desiderato.
+1. Per alcuni formati, è possibile personalizzare le impostazioni, come la voce text-to-speech, la velocità di riproduzione, la tabella di traduzione braille o la stampa grande.
+1. Fare clic sul pulsante "Prepara download".
+1. Tenere d'occhio l'e-mail per il link di download. Per la maggior parte dei formati, l'e-mail arriverà entro pochi minuti. La conversione in audio può richiedere molto più tempo, a seconda della lunghezza della presentazione, perché la sintesi vocale è un processo che richiede più tempo rispetto ad altre conversioni.
 
-## I host many meetings, and I want to allow my attendees to download the slides for all of these meetings. Can I turn this feature on by default?
+## Organizzo molte riunioni e voglio consentire ai miei partecipanti di scaricare le diapositive per tutte le riunioni. Posso attivare questa funzione per impostazione predefinita?
 
-Yes. Follow these steps:
+Sì, è possibile. Procedete come segue:
 1. 
-Go to ScribeForMeetings.com.
-1. If there’s a “Log In” link at the top of the page, click it, enter your email address, and follow the instructions to log into Scribe for Meetings.
-1. Click “Settings”, then “Meeting Defaults”.
-1. Check the checkbox called “Allow attendees to download accessible versions of slides”, then click “Save”.
+Andare su ScribeForMeetings.com.
+1. Se nella parte superiore della pagina è presente un link "Log In", cliccatelo, inserite il vostro indirizzo e-mail e seguite le istruzioni per accedere a Scribe for Meetings.
+1. Fare clic su "Impostazioni", quindi su "Predefinite per le riunioni".
+1. Selezionate la casella di controllo "Consenti ai partecipanti di scaricare versioni accessibili delle diapositive", quindi fate clic su "Salva".
 
-## I want to protect my slides from unauthorized copying and distribution. Does Scribe for Meetings support this?
+## Voglio proteggere le mie diapositive da copie e distribuzioni non autorizzate. Scribe for Meetings lo supporta?
 
-Unfortunately, Scribe for Meetings cannot stop your attendees from copying the text of your slides. However, if you don’t allow the slides to be downloaded, it won’t be easy for attendees to copy your slides, because they will have to copy one slide at a time. Also, note that in practice, this is no different from what any attendee can already do by taking screenshots of your slides.
+Purtroppo, Scribe for Meetings non può impedire ai partecipanti di copiare il testo delle diapositive. Tuttavia, se non si consente il download delle diapositive, non sarà facile per i partecipanti copiare le diapositive, perché dovranno copiare una diapositiva alla volta. Si noti inoltre che, in pratica, questo non è diverso da ciò che qualsiasi partecipante può già fare scattando screenshot delle vostre diapositive.
 
-## Is Scribe for Meetings multilingual?
+## Scribe for Meetings è multilingue?
 
-Yes. Scribe for Meetings can render content in any of 140 languages, again with no extra effort from the presenter.
+Sì. Scribe for Meetings è in grado di riprodurre i contenuti in 140 lingue, senza alcuno sforzo aggiuntivo da parte del relatore.
 
-## Do I need to slow down my presentation to make sure that print-impaired attendees can keep up?
+## Devo rallentare la mia presentazione per assicurarmi che i partecipanti con problemi di stampa possano seguirla?
 
-No. Scribe for Meetings has a feature called Dynamic Visual Representation, or DVR mode for short, that allows print-impaired attendees to read your accessible slides at their own pace. An attendee can pause the live presentation, go back to a slide they’ve already read, move forward at their own pace, and then continue with the live presentation when they’re ready.
-To use DVR mode, the attendee should press either the Suspend Presentation button or the Previous Slide button. These buttons are labeled as such for screen reader users, and for mouse users who hover over them. Visually, they’re at the bottom of the page and look like the Pause and Previous Track buttons in a media player. When the user presses one of these buttons, the live presentation will pause, and for the Previous Slide button, it will return to the previous slide. The user can then use the Previous Slide and Next Slide buttons to go through the slides at their own pace, and the Go Live button to return to the live presentation. These buttons look like the Previous Track, Next Track, and Play buttons in a media player.  
-Note that DVR mode only allows attendees to review slides that have been shown since they joined the presentation. If a print-impaired attendee is late for your presentation, then they missed the same slides that any other late attendee would have missed.
+No. Scribe for Meetings dispone di una funzione chiamata Rappresentazione visiva dinamica, o in breve modalità DVR, che consente ai partecipanti con disabilità di stampa di leggere le diapositive accessibili al proprio ritmo. Un partecipante può mettere in pausa la presentazione dal vivo, tornare a una diapositiva che ha già letto, andare avanti al proprio ritmo e poi continuare con la presentazione dal vivo quando è pronto.
+Per utilizzare la modalità DVR, il partecipante deve premere il pulsante Sospendi presentazione o il pulsante Diapositiva precedente. Questi pulsanti sono etichettati come tali per gli utenti di screen reader e per gli utenti del mouse che ci passano sopra. Visivamente, si trovano nella parte inferiore della pagina e assomigliano ai pulsanti Pausa e Traccia precedente di un lettore multimediale. Quando l'utente preme uno di questi pulsanti, la presentazione dal vivo viene messa in pausa e, nel caso del pulsante Diapositiva precedente, si torna alla diapositiva precedente. L'utente può quindi utilizzare i pulsanti Diapositiva precedente e Diapositiva successiva per scorrere le diapositive al proprio ritmo e il pulsante Vai alla diretta per tornare alla presentazione dal vivo. Questi pulsanti sono simili ai pulsanti Traccia precedente, Traccia successiva e Riproduci di un lettore multimediale.  
+Si noti che la modalità DVR consente ai partecipanti di rivedere solo le diapositive che sono state mostrate da quando sono entrati nella presentazione. Se un partecipante con disabilità di stampa arriva in ritardo alla presentazione, si perde le stesse diapositive che si sarebbe perso qualsiasi altro partecipante in ritardo.
 
-## I have a print-impaired attendee who would benefit from having my content spoken aloud but isn’t comfortable with a full screen reader. Can Scribe for Meetings help?
+## Ho un partecipante con disabilità di stampa che trarrebbe beneficio dalla riproduzione ad alta voce dei miei contenuti, ma non è a suo agio con un lettore di schermo completo. Scribe for Meetings può aiutarmi?
 
-Yes. Our Read Aloud feature will speak your slides using the voices provided by your user’s device and web browser, while drawing a box around each word as it is spoken to help the user follow along visually. For Windows users, we highly recommend the Microsoft Edge browser for this feature, because Edge offers outstanding voices in several languages, free of charge. However, this feature also works with all other major platforms and browsers, including mobile devices.  
-To start reading the current slide aloud, press the Read Aloud button, which is at the bottom of the screen and looks like a speaker. While Scribe for Meetings is reading the slide aloud, it will show controls to stop reading (the button with a square icon), pause or resume, go back or forward (the buttons that look like Previous Track and Next Track buttons in a media player), speed up and slow down reading, or change the voice. These controls will go away as soon as reading is finished or as soon as the user stops it.  
-Note that Read Aloud and DVR mode (see above) can be used together, to allow print-impaired attendees to read slides both in their own way and at their own pace.
+Sì. La nostra funzione di lettura ad alta voce La nostra funzione di lettura ad alta voce riproduce le diapositive utilizzando le voci fornite dal dispositivo e dal browser web dell'utente, disegnando al contempo un riquadro attorno a ciascuna parola mentre viene pronunciata per aiutare l'utente a seguirla visivamente. Per gli utenti Windows, consigliamo vivamente di utilizzare il browser Microsoft Edge per questa funzione, in quanto Edge offre gratuitamente voci eccezionali in diverse lingue. Tuttavia, questa funzione funziona anche con tutte le altre principali piattaforme e browser, compresi i dispositivi mobili.  
+Per iniziare a leggere ad alta voce la diapositiva corrente, premere il pulsante Leggi ad alta voce, che si trova nella parte inferiore dello schermo e ha l'aspetto di un altoparlante. Mentre Scribe for Meetings legge la diapositiva ad alta voce, vengono visualizzati i controlli per interrompere la lettura (il pulsante con l'icona quadrata), mettere in pausa o riprendere, andare indietro o avanti (i pulsanti che assomigliano ai pulsanti Traccia precedente e Traccia successiva di un lettore multimediale), accelerare e rallentare la lettura o cambiare la voce. Questi controlli spariranno non appena la lettura sarà terminata o non appena l'utente la interromperà.  
+Si noti che la modalità Lettura ad alta voce e la modalità DVR (vedi sopra) possono essere utilizzate insieme, per consentire ai partecipanti con problemi di stampa di leggere le diapositive a modo loro e al loro ritmo.
 
-## I have a print-impaired attendee who needs my slides in a large font but doesn’t need a full-screen magnification program. Can Scribe for Meetings help?
+## Ho un partecipante con problemi di stampa che ha bisogno delle mie diapositive in caratteri grandi ma non ha bisogno di un programma di ingrandimento a schermo intero. Scribe for Meetings può aiutarmi?
 
-Yes. Scribe for Meetings displays your slides in a way that makes them accessible for attendees with all types of content requirements. If large fonts are needed, an attendee can use their browser’s page zoom feature to adjust the font size of the slides, without requiring the user to continually scroll back and forth. Scribe for Meetings will also automatically display the text in the user’s preferred color scheme, whether it’s the usual dark-on-light, light-on-dark (also known as dark mode), or a custom scheme.  
+Sì. Scribe for Meetings visualizza le diapositive in modo da renderle accessibili ai partecipanti con qualsiasi tipo di esigenza di contenuto. Se sono necessari caratteri grandi, i partecipanti possono utilizzare la funzione di zoom della pagina del browser per regolare le dimensioni dei caratteri delle diapositive, senza dover scorrere continuamente avanti e indietro. Scribe for Meetings visualizza inoltre automaticamente il testo nella combinazione di colori preferita dall'utente, sia che si tratti della consueta modalità scuro su chiaro, chiaro su scuro (nota anche come modalità scura) o di una combinazione personalizzata.  
 
-## Wait! What’s going on here? Why do my slides look so different in Scribe for Meetings than they do in my presentation?
+## Aspettate! Cosa sta succedendo? Perché le mie diapositive hanno un aspetto così diverso in Scribe for Meetings rispetto alla mia presentazione?
 
-Every aspect of how Scribe for Meetings displays your slides is optimized for accessibility, for attendees with all types of print impairments. Since Scribe for Meetings is meant to be used alongside your existing meeting platform, attendees are always free to flip back to the main meeting window to see the slides as they’re displayed in your presentation without accessibility.
+Ogni aspetto della visualizzazione delle diapositive da parte di Scribe for Meetings è ottimizzato per l'accessibilità, per i partecipanti con qualsiasi tipo di disabilità di stampa. Poiché Scribe for Meetings è pensato per essere utilizzato insieme alla piattaforma di riunione esistente, i partecipanti sono sempre liberi di tornare alla finestra principale della riunione per vedere le diapositive così come sono visualizzate nella presentazione senza accessibilità.
 
-## I don’t use PowerPoint. Can I still make my presentation accessible with Scribe for Meetings?
+## Non uso PowerPoint. Posso comunque rendere accessibile la mia presentazione con Scribe for Meetings?
 
-Scribe for Meetings can make your screen-shared slides accessible no matter what app you use to present them, as long as you can provide your slide deck in PowerPoint format. Other presentation apps such as Keynote and Google Slides can convert their slide decks to PowerPoint format, so you can use these with Scribe for Meetings.
+Scribe for Meetings è in grado di rendere accessibili le diapositive condivise sullo schermo indipendentemente dall'applicazione utilizzata per la presentazione, purché sia possibile fornire la presentazione in formato PowerPoint. Altre app di presentazione, come Keynote e Google Slides, sono in grado di convertire le diapositive in formato PowerPoint, quindi possono essere utilizzate con Scribe for Meetings.
 
-## Scribe for Meetings isn’t showing the accessible versions of my slides during the presentation, or it’s skipping some slides. What’s wrong?
+## Scribe for Meetings non mostra le versioni accessibili delle mie diapositive durante la presentazione, oppure salta alcune diapositive. Cosa c'è che non va?
 
-Make sure that you’re presenting your slides in a full-screen slide show, and that you’ve set up Zoom or Microsoft Teams screen sharing to share that slide show with your audience. If you’re using PowerPoint for Windows to run your presentation, then once you’ve opened PowerPoint, make sure you press F5 to enter slide show mode.
-[Learn more about how to use Zoom screen sharing with PowerPoint.](https://support.zoom.us/hc/en-us/articles/203395347-Screen-Sharing-a-PowerPoint-Presentation)
-[Learn how to use Microsoft Teams screen sharing with PowerPoint.](https://support.microsoft.com/en-us/office/share-powerpoint-slides-in-a-teams-meeting-fc5a5394-2159-419c-bc59-1f64c1f4e470)
+Assicuratevi di presentare le diapositive in una presentazione a schermo intero e di aver impostato la condivisione dello schermo di Zoom o Microsoft Teams per condividere la presentazione con il pubblico. Se si utilizza PowerPoint per Windows per eseguire la presentazione, una volta aperto PowerPoint, assicurarsi di premere F5 per accedere alla modalità presentazione.
+[Per saperne di più su come usare la condivisione dello schermo Zoom con PowerPoint] (https://support.zoom.us/hc/en-us/articles/203395347-Screen-Sharing-a-PowerPoint-Presentation)
+[Per saperne di più su come utilizzare la condivisione dello schermo di Microsoft Teams con PowerPoint.](https://support.microsoft.com/en-us/office/share-powerpoint-slides-in-a-teams-meeting-fc5a5394-2159-419c-bc59-1f64c1f4e470)
 
-## How does Scribe for Meetings handle pictures and graphics in my slides?
+## Come gestisce Scribe for Meetings le immagini e la grafica nelle mie diapositive?
 
-If you already wrote descriptions (also known as alt tags or captions) for the graphical content in your slides, Scribe for Meetings will use those. Otherwise, Scribe for Meetings will use a cloud-based image description service powered by machine learning to automatically add alt tags for your graphics. If those pictures contain text, Scribe for Meetings will also use optical character recognition (OCR) to make that text accessible.
+Se sono già state scritte descrizioni (note anche come tag alt o didascalie) per il contenuto grafico delle diapositive, Scribe for Meetings le utilizzerà. Altrimenti, Scribe for Meetings utilizzerà un servizio di descrizione delle immagini basato su cloud e basato sull'apprendimento automatico per aggiungere automaticamente i tag alt per la grafica. Se le immagini contengono testo, Scribe for Meetings utilizzerà anche il riconoscimento ottico dei caratteri (OCR) per rendere accessibile il testo.
 
-## My slides have charts, diagrams, or other complex graphics. Can Scribe for Meetings handle them?
+## Le mie diapositive contengono grafici, diagrammi o altri elementi grafici complessi. Scribe for Meetings è in grado di gestirli?
 
-The short answer is, not for the most part. We’re still working on this. Because the Scribe Augmented Document Remediation platform is powered by machine learning, as we receive more documents and slide decks with complex graphics, we’ll be able to train our model to make those graphics accessible. But, for now, you’ll just have to try it and see.
+La risposta breve è: non per la maggior parte. Ci stiamo ancora lavorando. Poiché la piattaforma Scribe Augmented Document Remediation si basa sull'apprendimento automatico, man mano che riceveremo un maggior numero di documenti e diapositive con grafici complessi, saremo in grado di addestrare il nostro modello a rendere accessibili tali grafici. Ma per il momento non vi resta che provare e vedere.
 
-## Does Scribe for Meetings work with meeting platforms other than Zoom and Microsoft Teams, like Jitsi Meet, Google Meet, Slack, Amazon Chime, or BlueJeans?
+## Scribe for Meetings funziona con piattaforme di riunione diverse da Zoom e Microsoft Teams, come Jitsi Meet, Google Meet, Slack, Amazon Chime o BlueJeans?
 
-Not yet, but it will soon.
+Non ancora, ma lo farà presto.
 
-## How do people within our organization log into Scribe for Meetings?
+## Come fanno le persone della nostra organizzazione ad accedere a Scribe for Meetings?
 
-Scribe for Meetings currently supports two options for authentication. The simplest option is our email-based login process. Just enter your email address, and we’ll send a link that you can use to log in; no password is needed. For organizations with more stringent security requirements, we can also integrate with single sign-on (SSO) systems that implement the SAML standard, either via the [InCommon](https://www.incommon.org/) federation or using bilateral metadata exchange. Our SAML service provider uses the open-source Shibboleth SP package and was implemented in partnership with [Signet, Inc.,](https://www.signet.id/) an identity management and access control firm founded by an architect of Shibboleth. Note that we support SSO through a variety of identity providers; in addition to Shibboleth IdP, we’ve tested with Azure Active Directory. When your organization signs up with Scribe for Meetings, we’ll offer SSO onboarding, covered by the setup fee.
+Scribe for Meetings supporta attualmente due opzioni di autenticazione. L'opzione più semplice è il nostro processo di login basato sull'e-mail. È sufficiente inserire il proprio indirizzo e-mail e verrà inviato un link da utilizzare per accedere; non è necessaria alcuna password. Per le organizzazioni con requisiti di sicurezza più severi, possiamo anche integrarci con sistemi di single sign-on (SSO) che implementano lo standard SAML, sia tramite la federazione [InCommon](https://www.incommon.org/) sia utilizzando lo scambio bilaterale di metadati. Il nostro fornitore di servizi SAML utilizza il pacchetto open-source Shibboleth SP ed è stato implementato in collaborazione con [Signet, Inc.,](https://www.signet.id/) un'azienda di gestione delle identità e controllo degli accessi fondata da un architetto di Shibboleth. Si noti che supportiamo l'SSO attraverso una varietà di identity provider; oltre all'IdP Shibboleth, abbiamo testato Azure Active Directory. Quando la vostra organizzazione si iscrive a Scribe for Meetings, vi offriremo l'onboarding SSO, coperto dal costo di installazione.
 
-## What is the future of Scribe for Meetings?
+## Qual è il futuro di Scribe for Meetings?
 
-Scribe, the platform behind our Scribe line of products, is actively learning every time a document is processed. The machine learning powered Augmented Document Remediation technology gets smarter with each page, moving us that much closer to 100% accuracy. The benefits spill over into all our products, making Scribe for Meetings an application that will only get better the more you use it.
+Scribe, la piattaforma alla base della nostra linea di prodotti Scribe, apprende attivamente ogni volta che viene elaborato un documento. La tecnologia di Augmented Document Remediation, alimentata dall'apprendimento automatico, diventa più intelligente a ogni pagina, avvicinandoci sempre più al 100% di precisione. I vantaggi si estendono a tutti i nostri prodotti, rendendo Scribe for Meetings un'applicazione che migliorerà sempre di più.
