--- a/src/content/docs/sv/faq.mdx
+++ b/src/content/docs/sv/faq.mdx
@@ -1,139 +1,139 @@
 ---
-title: Frequently Asked questions
+title: Ofta ställda frågor
 ---
 
-Here are answers to some common questions concerning Scribe for Meetings. When faced with an issue, please refer to this document whenever possible.  
-Don’t see your question? [Contact us.](https://pneumasolutions.com/contact/), and let’s get you squared away.
+Här hittar du svar på några vanliga frågor om Scribe for Meetings. När du ställs inför ett problem, vänligen hänvisa till detta dokument när det är möjligt.  
+Ser du inte din fråga? [Kontakta oss.](https://pneumasolutions.com/contact/), så hjälper vi dig att komma igång.
 
-## What is Scribe for Meetings?
+## Vad är Scribe för möten?
 
-Scribe for Meetings is a cloud-based technology that takes a shared presentation on platforms like Zoom, Microsoft Teams, Google Meet, and others and renders it into an accessible presentation in real time for print-impaired individuals.
+Scribe for Meetings är en molnbaserad teknik som tar en delad presentation på plattformar som Zoom, Microsoft Teams, Google Meet och andra och gör den till en tillgänglig presentation i realtid för personer med nedsatt skrivförmåga.
 
-## Who benefits from Scribe for Meetings?
+## Vem drar nytta av Scribe for Meetings?
 
-First and most importantly, the millions of print-impaired persons who would otherwise not benefit from the information being presented; and, the masses of businesses large and small, government agencies, all levels of education,, and organizations who know little about accessibility but would like an affordable means of making their content more inclusive.
+Först och främst de miljontals personer med nedsatt skrivförmåga som annars inte skulle kunna ta del av den information som presenteras, och massorna av stora och små företag, myndigheter, alla utbildningsnivåer och organisationer som vet lite om tillgänglighet men som vill ha ett prisvärt sätt att göra sitt innehåll mer inkluderande.
 
-## Why should I choose Scribe for Meetings over other products?
+## Varför ska jag välja Scribe for Meetings framför andra produkter?
 
-We’re confident there is nothing else out there that does what we do quite the way we do it. Scribe for Meetings is the first technology of its kind to synchronize with meeting platforms in real time. Sure, competitors will take note and likely roll out their imitations, and we look forward to the competition ,but unless they plan on competing on price, we feel confident you will find what you need right here.
+Vi är övertygade om att det inte finns något annat som gör det vi gör på samma sätt som vi gör det. Scribe for Meetings är den första tekniken i sitt slag som synkroniserar med mötesplattformar i realtid. Visst, konkurrenterna kommer att notera detta och sannolikt lansera sina imitationer, och vi ser fram emot konkurrensen, men om de inte planerar att konkurrera med priset känner vi oss övertygade om att du kommer att hitta vad du behöver här.
 
-## How does Scribe for Meetings work?
+## Hur fungerar Scribe for Meetings?
 
-If you are the host:
-1. Visit [ScribeForMeetings.com,](https://scribeformeetings.com) paste the invite link for your meeting, and press “Go”.
-1. Click the button to register your meeting.
-1. If prompted, enter your email address to log in. If you’re using Scribe for Meetings on behalf of an organization, make sure to use your email address provided by that organization. If your organization has integrated Scribe for Meetings with a single sign-on (SSO) system, then you’ll be taken to the normal login process for your organization, or possibly logged in automatically. Otherwise, we’ll send you an email with a link that you can use to log into Scribe for Meetings.
-1. Enter a name for your meeting, select your PowerPoint slide deck, and press “Submit”.
-    NOTE: Scribe for Meetings currently supports Zoom meetings, Zoom webinars and Microsoft Teams. Sign up to our email list to receive a notification when we add features and additional meeting platforms.
+Om du är värd:
+1. Besök [ScribeForMeetings.com,](https://scribeformeetings.com) klistra in inbjudningslänken för ditt möte och tryck på "Go".
+1. Klicka på knappen för att registrera ditt möte.
+1. Ange din e-postadress för att logga in om du blir ombedd att göra det. Om du använder Scribe for Meetings på uppdrag av en organisation, se till att du använder den e-postadress som organisationen har angett. Om din organisation har integrerat Scribe for Meetings med ett SSO-system (Single Sign-On) kommer du till den normala inloggningsprocessen för din organisation, eller möjligen loggas in automatiskt. I annat fall skickar vi dig ett e-postmeddelande med en länk som du kan använda för att logga in på Scribe for Meetings.
+1. Ange ett namn för ditt möte, välj din PowerPoint-presentation och tryck på "Skicka".
+    OBS: Scribe for Meetings stöder för närvarande Zoom-möten, Zoom-webbseminarier och Microsoft Teams. Registrera dig på vår e-postlista för att få ett meddelande när vi lägger till funktioner och ytterligare mötesplattformar.
 
-Your content will be ready to launch within minutes. No knowledge of creating accessible presentations is required. As the host, you don’t need to run extra software on your device, and content can be uploaded as little as 5 minutes before the meeting.
-For the print-impaired meeting attendee, navigate to https://www.ScribeForMeetings.com, paste in your Zoom or Microsoft Teams invite link, and press “Go”. Alternatively, your meeting host might have given you a direct link to Scribe for Meetings, either in the invitation email or in the meeting itself via chat. Whichever way you get there, you’re now ready to follow along with the presentation in any web browser on any platform.
+Ditt innehåll kommer att vara redo att lanseras inom några minuter. Det krävs ingen kunskap om att skapa tillgängliga presentationer. Som värd behöver du inte köra någon extra programvara på din enhet, och innehållet kan laddas upp så kort tid som 5 minuter före mötet.
+För mötesdeltagare med nedsatt skrivförmåga går du till https://www.ScribeForMeetings.com, klistrar in länken till din Zoom- eller Microsoft Teams-inbjudan och trycker på "Go". Alternativt kan din mötesvärd ha gett dig en direktlänk till Scribe for Meetings, antingen i e-postinbjudan eller i själva mötet via chatten. Oavsett hur du kommer dit är du nu redo att följa med i presentationen i vilken webbläsare som helst på vilken plattform som helst.
 
-## How difficult is it to install Scribe for Meetings?
+## Hur svårt är det att installera Scribe for Meetings?
 
-Scribe for Meetings is not an installed application. It is a cloud service, so nothing more than a browser is needed to enjoy a meeting. For presenters, Other than uploading their content in advance of the meeting, the process was intentionally designed to be simple. There is nothing to install to your computer or device other than Zoom, Microsoft Teams or similar meeting platforms.
-Enterprise customers can host Scribe for Meetings on their own servers. Please get in touch with us for details.
+Scribe for Meetings är inte en installerad applikation. Det är en molntjänst, så inget mer än en webbläsare behövs för att njuta av ett möte. För presentatörer, förutom att ladda upp sitt innehåll före mötet, var processen avsiktligt utformad för att vara enkel. Det finns inget att installera på din dator eller enhet annat än Zoom, Microsoft Teams eller liknande mötesplattformar.
+Företagskunder kan hosta Scribe for Meetings på sina egna servrar. Vänligen kontakta oss för mer information.
 
-## I see an attendee named “Scribe for Meetings” trying to join my meeting. What’s going on?
+## Jag ser en deltagare som heter "Scribe for Meetings" som försöker gå med i mitt möte. Vad är det som händer?
 
-That’s the Scribe bot. This bot watches the screen in your meeting, so it can see what slide is currently being displayed and provide the accessible version of that slide in real time to print-impaired attendees. The Scribe bot will not disrupt your meeting in any way, and it will not collect any information other than what content is currently being displayed through screen sharing. If your meeting has a waiting room, please promptly admit the Scribe bot into the meeting. Otherwise, Scribe for Meetings will not work.
+Det är Scribe-boten. Denna bot tittar på skärmen i ditt möte, så att den kan se vilken bild som för närvarande visas och tillhandahålla den tillgängliga versionen av den bilden i realtid till deltagare med nedsatt skrivförmåga. Scribe-boten stör inte mötet på något sätt och den samlar inte in någon annan information än vilket innehåll som för närvarande visas via skärmdelning. Om ditt möte har ett väntrum ska du omedelbart släppa in Scribe-boten i mötet. Annars kommer Scribe för möten inte att fungera.
 
-## I’m a print-impaired meeting attendee, and I don’t know if the meeting I’m attending has been registered through Scribe for Meetings. What can I do?
+## Jag är en mötesdeltagare med nedsatt skrivförmåga och jag vet inte om mötet jag deltar i har registrerats via Scribe for Meetings. Vad kan jag göra?
 
-Go to [ScribeForMeetings.com](https://scribeformeetings.com), paste in the Zoom or Microsoft Teams invite link for your meeting, and press “Go”. If the meeting has been registered with Scribe for Meetings, then you’re ready to follow along with accessible slides. If not, you can sign up to be notified by email when the meeting has been registered with Scribe for Meetings.
+Gå till [ScribeForMeetings.com](https://scribeformeetings.com), klistra in Zoom- eller Microsoft Teams-inbjudningslänken för ditt möte och tryck på "Go". Om mötet har registrerats med Scribe for Meetings är du redo att följa med i tillgängliga bilder. Om inte, kan du registrera dig för att få ett e-postmeddelande när mötet har registrerats med Scribe for Meetings.
 
-## I frequently attend Zoom or Microsoft Teams meetings. What’s the easiest way for me to find out if a meeting is registered with Scribe for Meetings, and if it is, view the accessible content?
+## Jag deltar ofta i Zoom- eller Microsoft Teams-möten. Vad är det enklaste sättet för mig att ta reda på om ett möte är registrerat med Scribe for Meetings, och om det är så, visa det tillgängliga innehållet?
 
-Scribe for Meetings has an [extension for Chrome and Edge](https://chrome.google.com/webstore/detail/scribe-for-meetings/bikolphfhfiambndbiimigilhfekcfpn) that checks the availability on Scribe for Meetings of any Zoom or Microsoft Teams meeting you attend. With a single hotkey, you can view the accessible content if the meeting is registered, or request a follow-up notification if the meeting is registered with Scribe for Meetings later.
+Scribe for Meetings har ett [tillägg för Chrome och Edge](https://chrome.google.com/webstore/detail/scribe-for-meetings/bikolphfhfiambndbiimigilhfekcfpn) som kontrollerar tillgängligheten i Scribe for Meetings för alla Zoom- eller Microsoft Teams-möten som du deltar i. Med en enda snabbtangent kan du visa det tillgängliga innehållet om mötet är registrerat, eller begära ett uppföljningsmeddelande om mötet registreras i Scribe for Meetings senare.
 
-## I’m a print-impaired meeting attendee. Do you have any resources to help me ask the meeting host to use Scribe for Meetings?
+## Jag är en mötesdeltagare med nedsatt skrivförmåga. Har du några resurser som kan hjälpa mig att be mötesvärden att använda Scribe for Meetings?
 
-Yes; check out our [Scribe for Meetings Self-Advocacy Kit](https://sak.scribeformeetings.com). Here you’ll find a variety of pre-written letters that you can personalize, then copy and paste into an email.
+Ja, kolla in vårt [Scribe for Meetings Self-Advocacy Kit] (https://sak.scribeformeetings.com). Här hittar du en mängd förskrivna brev som du kan anpassa och sedan kopiera och klistra in i ett e-postmeddelande.
 
-## Can Scribe for Meetings convert a presentation to accessible file formats for offline viewing?
+## Kan Scribe for Meetings konvertera en presentation till tillgängliga filformat för offlinevisning?
 
-Yes. When creating the meeting, the presenter can optionally choose to provide their presentation for downloading in the following file formats:
-* An accessible web page, with all of the same features as the live presentation, including read aloud
-* Tagged PDF
-* MP3, via text-to-speech in about a dozen languages
-* DAISY, text plus audio
+Ja, det går. När mötet skapas kan presentatören välja att tillhandahålla sin presentation för nedladdning i följande filformat:
+* En tillgänglig webbsida, med alla samma funktioner som livepresentationen, inklusive uppläst text
+* Taggad PDF
+* MP3, via text-till-tal på ett dussintal språk
+* DAISY, text plus ljud
 * EPUB
 * Microsoft Word
-* Braille: Grade 1, Grade 2, Unified English Braille, and many other languages
+* Punktskrift: Grade 1, Grade 2, Unified English Braille och många andra språk
 
-The PDF and Microsoft Word options support large print. This option, and other options such as speaking rate for audio output, can be chosen by attendees when they download the slides.
-This feature is not enabled by default; the presenter must choose to allow it. To enable this feature when registering a meeting, check the checkbox called “Allow attendees to download accessible versions of slides.” This choice will only take effect for the meeting currently being registered.
-For a meeting where this feature is enabled, as soon as the presenter has shown a slide, the web page where attendees view accessible slides will include a link called “Download Slides”. To download the slides, an attendee should follow these steps:
-1. Click the “Download Slides” link.
-1. If prompted, enter your email address and follow the instructions to log in.
-1. Choose the accessible format you want.
-1. For some formats, you can optionally customize settings, such as text-to-speech voice, speaking rate, braille translation table, or large print.
-1. Click the “Prepare Download” button.
-1. Watch your email for the download link. For most formats, the email will arrive within a few minutes. Conversion to audio can take much longer, depending on the length of the slide deck, because speech synthesis is a more time-consuming process than other conversions.
+PDF- och Microsoft Word-alternativen stöder stora tryck. Detta alternativ, och andra alternativ såsom talhastighet för ljudutmatning, kan väljas av deltagarna när de laddar ner bilderna.
+Den här funktionen är inte aktiverad som standard, utan presentatören måste välja att tillåta den. Om du vill aktivera den här funktionen när du registrerar ett möte markerar du kryssrutan "Tillåt deltagare att ladda ner tillgängliga versioner av bilder" Detta val kommer endast att gälla för det möte som för närvarande registreras.
+För ett möte där denna funktion är aktiverad, så snart presentatören har visat en bild, kommer webbsidan där deltagarna visar tillgängliga bilder att innehålla en länk som heter "Ladda ner bilder". För att ladda ner bilderna ska en deltagare följa dessa steg:
+1. Klicka på länken "Ladda ner bilder".
+1. Ange din e-postadress om du blir ombedd att göra det och följ instruktionerna för att logga in.
+1. Välj det tillgängliga format du vill ha.
+1. För vissa format kan du anpassa inställningar, t.ex. text-till-tal-röst, talhastighet, översättningstabell för punktskrift eller storstil.
+1. Klicka på knappen "Förbered nedladdning".
+1. Håll utkik efter nedladdningslänken i din e-post. För de flesta format kommer e-postmeddelandet inom några minuter. Konvertering till ljud kan ta mycket längre tid, beroende på hur långt bildspelet är, eftersom talsyntes är en mer tidskrävande process än andra konverteringar.
 
-## I host many meetings, and I want to allow my attendees to download the slides for all of these meetings. Can I turn this feature on by default?
+## Jag är värd för många möten och jag vill låta mina deltagare ladda ner bilderna för alla dessa möten. Kan jag aktivera den här funktionen som standard?
 
-Yes. Follow these steps:
+Ja, det kan du. Följ dessa steg:
 1. 
-Go to ScribeForMeetings.com.
-1. If there’s a “Log In” link at the top of the page, click it, enter your email address, and follow the instructions to log into Scribe for Meetings.
-1. Click “Settings”, then “Meeting Defaults”.
-1. Check the checkbox called “Allow attendees to download accessible versions of slides”, then click “Save”.
+Gå till ScribeForMeetings.com.
+1. Om det finns en "Logga in"-länk högst upp på sidan klickar du på den, anger din e-postadress och följer instruktionerna för att logga in på Scribe for Meetings.
+1. Klicka på "Inställningar" och sedan på "Standardinställningar för möten".
+1. Markera kryssrutan som heter "Tillåt deltagare att ladda ner tillgängliga versioner av bilder" och klicka sedan på "Spara".
 
-## I want to protect my slides from unauthorized copying and distribution. Does Scribe for Meetings support this?
+## Jag vill skydda mina bilder från obehörig kopiering och distribution. Har Scribe for Meetings stöd för detta?
 
-Unfortunately, Scribe for Meetings cannot stop your attendees from copying the text of your slides. However, if you don’t allow the slides to be downloaded, it won’t be easy for attendees to copy your slides, because they will have to copy one slide at a time. Also, note that in practice, this is no different from what any attendee can already do by taking screenshots of your slides.
+Tyvärr kan Scribe for Meetings inte hindra dina deltagare från att kopiera texten i dina bilder. Men om du inte tillåter att bilderna laddas ner kommer det inte att vara lätt för deltagarna att kopiera dina bilder, eftersom de måste kopiera en bild i taget. Observera också att detta i praktiken inte skiljer sig från vad alla deltagare redan kan göra genom att ta skärmdumpar av dina bilder.
 
-## Is Scribe for Meetings multilingual?
+## Är Scribe for Meetings flerspråkigt?
 
-Yes. Scribe for Meetings can render content in any of 140 languages, again with no extra effort from the presenter.
+Ja, Scribe for Meetings kan återge innehåll på 140 språk, återigen utan extra ansträngning från presentatören.
 
-## Do I need to slow down my presentation to make sure that print-impaired attendees can keep up?
+## Måste jag sakta ner min presentation för att se till att deltagare med läs- och skrivsvårigheter kan hänga med?
 
-No. Scribe for Meetings has a feature called Dynamic Visual Representation, or DVR mode for short, that allows print-impaired attendees to read your accessible slides at their own pace. An attendee can pause the live presentation, go back to a slide they’ve already read, move forward at their own pace, and then continue with the live presentation when they’re ready.
-To use DVR mode, the attendee should press either the Suspend Presentation button or the Previous Slide button. These buttons are labeled as such for screen reader users, and for mouse users who hover over them. Visually, they’re at the bottom of the page and look like the Pause and Previous Track buttons in a media player. When the user presses one of these buttons, the live presentation will pause, and for the Previous Slide button, it will return to the previous slide. The user can then use the Previous Slide and Next Slide buttons to go through the slides at their own pace, and the Go Live button to return to the live presentation. These buttons look like the Previous Track, Next Track, and Play buttons in a media player.  
-Note that DVR mode only allows attendees to review slides that have been shown since they joined the presentation. If a print-impaired attendee is late for your presentation, then they missed the same slides that any other late attendee would have missed.
+Nej. Scribe for Meetings har en funktion som kallas Dynamic Visual Representation, förkortat DVR-läge, som gör att deltagare med nedsatt syn kan läsa dina tillgängliga bilder i sin egen takt. En deltagare kan pausa livepresentationen, gå tillbaka till en bild som de redan har läst, gå framåt i sin egen takt och sedan fortsätta med livepresentationen när de är redo.
+För att använda DVR-läget ska deltagaren trycka på antingen knappen Avbryt presentation eller knappen Föregående bild. Dessa knappar är märkta som sådana för skärmläsaranvändare och för musanvändare som håller muspekaren över dem. Visuellt finns de längst ner på sidan och ser ut som knapparna Paus och Föregående spår i en mediaspelare. När användaren trycker på någon av dessa knappar pausas livepresentationen, och för knappen Föregående bild återgår den till föregående bild. Användaren kan sedan använda knapparna Föregående bild och Nästa bild för att gå igenom bilderna i sin egen takt, och knappen Gå live för att återgå till livepresentationen. Dessa knappar ser ut som knapparna Föregående spår, Nästa spår och Spela upp i en mediaspelare.  
+Observera att DVR-läget endast tillåter deltagare att granska bilder som har visats sedan de gick med i presentationen. Om en deltagare med nedsatt skrivförmåga är sen till din presentation missar de samma bilder som alla andra sena deltagare skulle ha missat.
 
-## I have a print-impaired attendee who would benefit from having my content spoken aloud but isn’t comfortable with a full screen reader. Can Scribe for Meetings help?
+## Jag har en deltagare med läs- och skrivsvårigheter som skulle ha nytta av att få mitt innehåll uppläst men som inte är bekväm med en skärmläsare. Kan Scribe for Meetings hjälpa till?
 
-Yes. Our Read Aloud feature will speak your slides using the voices provided by your user’s device and web browser, while drawing a box around each word as it is spoken to help the user follow along visually. For Windows users, we highly recommend the Microsoft Edge browser for this feature, because Edge offers outstanding voices in several languages, free of charge. However, this feature also works with all other major platforms and browsers, including mobile devices.  
-To start reading the current slide aloud, press the Read Aloud button, which is at the bottom of the screen and looks like a speaker. While Scribe for Meetings is reading the slide aloud, it will show controls to stop reading (the button with a square icon), pause or resume, go back or forward (the buttons that look like Previous Track and Next Track buttons in a media player), speed up and slow down reading, or change the voice. These controls will go away as soon as reading is finished or as soon as the user stops it.  
-Note that Read Aloud and DVR mode (see above) can be used together, to allow print-impaired attendees to read slides both in their own way and at their own pace.
+Ja, det kan vi. Vår högläsningsfunktion läser upp dina bilder med de röster som tillhandahålls av din användares enhet och webbläsare, samtidigt som en ruta ritas runt varje ord när det läses upp för att hjälpa användaren att följa med visuellt. För Windows-användare rekommenderar vi Microsoft Edge för den här funktionen, eftersom Edge erbjuder enastående röster på flera språk, kostnadsfritt. Funktionen fungerar dock även med alla andra större plattformar och webbläsare, inklusive mobila enheter.  
+För att börja läsa den aktuella bilden högt trycker du på knappen Läs högt, som finns längst ner på skärmen och ser ut som en högtalare. Medan Scribe for Meetings läser upp bilden visas kontroller för att stoppa läsningen (knappen med en fyrkantig ikon), pausa eller återuppta, gå bakåt eller framåt (knapparna som ser ut som knapparna Föregående spår och Nästa spår i en mediaspelare), snabba upp och sakta ner läsningen eller ändra rösten. Dessa kontroller försvinner så snart läsningen är klar eller så snart användaren stoppar den.  
+Observera att Högläsning och DVR-läge (se ovan) kan användas tillsammans, så att deltagare med nedsatt läsförmåga kan läsa bilderna både på sitt eget sätt och i sin egen takt.
 
-## I have a print-impaired attendee who needs my slides in a large font but doesn’t need a full-screen magnification program. Can Scribe for Meetings help?
+## Jag har en deltagare med nedsatt skrivförmåga som behöver mina bilder i ett stort typsnitt men inte behöver ett förstoringsprogram för hela skärmen. Kan Scribe for Meetings hjälpa till?
 
-Yes. Scribe for Meetings displays your slides in a way that makes them accessible for attendees with all types of content requirements. If large fonts are needed, an attendee can use their browser’s page zoom feature to adjust the font size of the slides, without requiring the user to continually scroll back and forth. Scribe for Meetings will also automatically display the text in the user’s preferred color scheme, whether it’s the usual dark-on-light, light-on-dark (also known as dark mode), or a custom scheme.  
+Ja, Scribe for Meetings visar dina bilder på ett sätt som gör dem tillgängliga för deltagare med alla typer av innehållskrav. Om stora teckensnitt behövs kan en deltagare använda webbläsarens sidzoomfunktion för att justera teckenstorleken på bilderna, utan att användaren behöver scrolla fram och tillbaka hela tiden. Scribe for Meetings visar också automatiskt texten i det färgschema som användaren föredrar, oavsett om det är det vanliga mörk-på-ljus, ljus-på-mörk (även känt som mörkt läge) eller ett anpassat schema.  
 
-## Wait! What’s going on here? Why do my slides look so different in Scribe for Meetings than they do in my presentation?
+## Vänta! Vad är det som händer här? Varför ser mina bilder så annorlunda ut i Scribe for Meetings än de gör i min presentation?
 
-Every aspect of how Scribe for Meetings displays your slides is optimized for accessibility, for attendees with all types of print impairments. Since Scribe for Meetings is meant to be used alongside your existing meeting platform, attendees are always free to flip back to the main meeting window to see the slides as they’re displayed in your presentation without accessibility.
+Varje aspekt av hur Scribe for Meetings visar dina bilder är optimerad för tillgänglighet, för deltagare med alla typer av trycksvårigheter. Eftersom Scribe for Meetings är tänkt att användas tillsammans med din befintliga mötesplattform kan deltagarna alltid gå tillbaka till huvudfönstret för att se bilderna som de visas i din presentation utan tillgänglighet.
 
-## I don’t use PowerPoint. Can I still make my presentation accessible with Scribe for Meetings?
+## Jag använder inte PowerPoint. Kan jag ändå göra min presentation tillgänglig med Scribe for Meetings?
 
-Scribe for Meetings can make your screen-shared slides accessible no matter what app you use to present them, as long as you can provide your slide deck in PowerPoint format. Other presentation apps such as Keynote and Google Slides can convert their slide decks to PowerPoint format, so you can use these with Scribe for Meetings.
+Scribe for Meetings kan göra dina skärmdelade bilder tillgängliga oavsett vilken app du använder för att presentera dem, så länge du kan tillhandahålla ditt bildspel i PowerPoint-format. Andra presentationsappar som Keynote och Google Slides kan konvertera sina bildspel till PowerPoint-format, så du kan använda dessa med Scribe for Meetings.
 
-## Scribe for Meetings isn’t showing the accessible versions of my slides during the presentation, or it’s skipping some slides. What’s wrong?
+## Scribe for Meetings visar inte de tillgängliga versionerna av mina bilder under presentationen, eller så hoppar den över vissa bilder. Vad är det som är fel?
 
-Make sure that you’re presenting your slides in a full-screen slide show, and that you’ve set up Zoom or Microsoft Teams screen sharing to share that slide show with your audience. If you’re using PowerPoint for Windows to run your presentation, then once you’ve opened PowerPoint, make sure you press F5 to enter slide show mode.
-[Learn more about how to use Zoom screen sharing with PowerPoint.](https://support.zoom.us/hc/en-us/articles/203395347-Screen-Sharing-a-PowerPoint-Presentation)
-[Learn how to use Microsoft Teams screen sharing with PowerPoint.](https://support.microsoft.com/en-us/office/share-powerpoint-slides-in-a-teams-meeting-fc5a5394-2159-419c-bc59-1f64c1f4e470)
+Se till att du presenterar dina bilder i ett bildspel i helskärm och att du har konfigurerat Zoom eller Microsoft Teams skärmdelning för att dela bildspelet med din publik. Om du använder PowerPoint för Windows för att köra din presentation, se till att du trycker på F5 för att öppna bildspelsläget när du har öppnat PowerPoint.
+[Läs mer om hur du använder Zoom skärmdelning med PowerPoint](https://support.zoom.us/hc/en-us/articles/203395347-Screen-Sharing-a-PowerPoint-Presentation)
+[Läs mer om hur du använder Microsoft Teams skärmdelning med PowerPoint.](https://support.microsoft.com/en-us/office/share-powerpoint-slides-in-a-teams-meeting-fc5a5394-2159-419c-bc59-1f64c1f4e470)
 
-## How does Scribe for Meetings handle pictures and graphics in my slides?
+## Hur hanterar Scribe for Meetings bilder och grafik i mina bilder?
 
-If you already wrote descriptions (also known as alt tags or captions) for the graphical content in your slides, Scribe for Meetings will use those. Otherwise, Scribe for Meetings will use a cloud-based image description service powered by machine learning to automatically add alt tags for your graphics. If those pictures contain text, Scribe for Meetings will also use optical character recognition (OCR) to make that text accessible.
+Om du redan har skrivit beskrivningar (även kända som alt-taggar eller bildtexter) för det grafiska innehållet i dina bilder, kommer Scribe for Meetings att använda dessa. Annars kommer Scribe for Meetings att använda en molnbaserad bildbeskrivningstjänst som drivs av maskininlärning för att automatiskt lägga till alt-taggar för dina bilder. Om bilderna innehåller text kommer Scribe for Meetings även att använda optisk teckenigenkänning (OCR) för att göra texten tillgänglig.
 
-## My slides have charts, diagrams, or other complex graphics. Can Scribe for Meetings handle them?
+## Mina bilder innehåller diagram, tabeller eller annan komplex grafik. Kan Scribe for Meetings hantera dem?
 
-The short answer is, not for the most part. We’re still working on this. Because the Scribe Augmented Document Remediation platform is powered by machine learning, as we receive more documents and slide decks with complex graphics, we’ll be able to train our model to make those graphics accessible. But, for now, you’ll just have to try it and see.
+Det korta svaret är, för det mesta inte. Vi arbetar fortfarande på detta. Eftersom Scribe Augmented Document Remediation-plattformen drivs av maskininlärning kommer vi, när vi får in fler dokument och bildspel med komplex grafik, att kunna träna vår modell för att göra denna grafik tillgänglig. Men än så länge får du helt enkelt prova dig fram.
 
-## Does Scribe for Meetings work with meeting platforms other than Zoom and Microsoft Teams, like Jitsi Meet, Google Meet, Slack, Amazon Chime, or BlueJeans?
+## Fungerar Scribe for Meetings med andra mötesplattformar än Zoom och Microsoft Teams, som Jitsi Meet, Google Meet, Slack, Amazon Chime eller BlueJeans?
 
-Not yet, but it will soon.
+Inte ännu, men det kommer snart.
 
-## How do people within our organization log into Scribe for Meetings?
+## Hur loggar personer inom vår organisation in på Scribe for Meetings?
 
-Scribe for Meetings currently supports two options for authentication. The simplest option is our email-based login process. Just enter your email address, and we’ll send a link that you can use to log in; no password is needed. For organizations with more stringent security requirements, we can also integrate with single sign-on (SSO) systems that implement the SAML standard, either via the [InCommon](https://www.incommon.org/) federation or using bilateral metadata exchange. Our SAML service provider uses the open-source Shibboleth SP package and was implemented in partnership with [Signet, Inc.,](https://www.signet.id/) an identity management and access control firm founded by an architect of Shibboleth. Note that we support SSO through a variety of identity providers; in addition to Shibboleth IdP, we’ve tested with Azure Active Directory. When your organization signs up with Scribe for Meetings, we’ll offer SSO onboarding, covered by the setup fee.
+Scribe for Meetings stöder för närvarande två alternativ för autentisering. Det enklaste alternativet är vår e-postbaserade inloggningsprocess. Ange bara din e-postadress så skickar vi en länk som du kan använda för att logga in; inget lösenord behövs. För organisationer med strängare säkerhetskrav kan vi även integrera med SSO-system (single sign-on) som implementerar SAML-standarden, antingen via [InCommon](https://www.incommon.org/) federationen eller med hjälp av bilateralt utbyte av metadata. Vår SAML-tjänsteleverantör använder Shibboleth SP-paketet med öppen källkod och implementerades i samarbete med [Signet, Inc.,](https://www.signet.id/), ett företag inom identitetshantering och åtkomstkontroll som grundades av en av Shibboleths arkitekter. Observera att vi stöder SSO via en mängd olika identitetsleverantörer; förutom Shibboleth IdP har vi testat med Azure Active Directory. När din organisation registrerar sig med Scribe for Meetings erbjuder vi SSO-onboarding, som täcks av installationsavgiften.
 
-## What is the future of Scribe for Meetings?
+## Vad är framtiden för Scribe for Meetings?
 
-Scribe, the platform behind our Scribe line of products, is actively learning every time a document is processed. The machine learning powered Augmented Document Remediation technology gets smarter with each page, moving us that much closer to 100% accuracy. The benefits spill over into all our products, making Scribe for Meetings an application that will only get better the more you use it.
+Scribe, plattformen bakom våra Scribe-produkter, lär sig aktivt varje gång ett dokument bearbetas. Den maskininlärningsdrivna Augmented Document Remediation-tekniken blir smartare för varje sida och tar oss så mycket närmare 100% noggrannhet. Fördelarna sprider sig till alla våra produkter, vilket gör Scribe for Meetings till en applikation som bara blir bättre ju mer du använder den.
